@@ -1,23 +1,24 @@
-/*
- * Copyright 2019 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.drools.scenariosimulation.backend.expression;
 
-import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
@@ -30,232 +31,304 @@ import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.node.TextNode;
-import org.assertj.core.api.Assertions;
+
+import org.assertj.core.api.Condition;
+import org.junit.Before;
 import org.junit.Test;
 
-import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.drools.scenariosimulation.api.utils.ConstantsHolder.VALUE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
 
 public class AbstractExpressionEvaluatorTest {
 
     private static final JsonNodeFactory factory = JsonNodeFactory.instance;
-    private static final AbstractExpressionEvaluator expressionEvaluatorLocal = new AbstractExpressionEvaluator() {
+    private AbstractExpressionEvaluator expressionEvaluator;
 
-        @Override
-        public String fromObjectToExpression(Object value) {
-            throw new UnsupportedOperationException();
-        }
+	private Condition<ExpressionEvaluatorResult> successful= new Condition<>(x -> x.isSuccessful(), "isSuccessful");
+	private Condition<ExpressionEvaluatorResult> notSuccessful= new Condition<>(x -> !x.isSuccessful(), "isSuccessful");
 
-        @Override
-        protected Object extractFieldValue(Object result, String fieldName) {
-            return result;
-        }
-
-        @Override
-        protected boolean internalUnaryEvaluation(String rawExpression, Object resultValue, Class<?> resultClass, boolean skipEmptyString) {
-            return true;
-        }
-
-        @Override
-        protected Object internalLiteralEvaluation(String raw, String className) {
-            return raw;
-        }
-
-        @Override
-        protected Object createObject(String className, List<String> genericClasses) {
-            return new HashMap<>();
-        }
-
-        @SuppressWarnings("unchecked")
-        @Override
-        protected void setField(Object toReturn, String fieldName, Object fieldValue) {
-            ((Map) toReturn).put(fieldName, fieldValue);
-        }
-
-        @Override
-        protected Map.Entry<String, List<String>> getFieldClassNameAndGenerics(Object element, String fieldName, String className, List<String> genericClasses) {
-            return new AbstractMap.SimpleEntry<>("", Collections.singletonList(""));
-        }
-    };
-
+    @Before
+    public void setUp() {
+        expressionEvaluator = new FakeExpressionEvaluator();
+    }
+    
     @Test
     public void evaluateLiteralExpression() {
-        assertNull(expressionEvaluatorLocal.evaluateLiteralExpression(null, String.class.getCanonicalName(), null));
-        assertNull(expressionEvaluatorLocal.evaluateLiteralExpression(null, List.class.getCanonicalName(), null));
-        assertNull(expressionEvaluatorLocal.evaluateLiteralExpression(null, Map.class.getCanonicalName(), null));
+        assertThat(expressionEvaluator.evaluateLiteralExpression(null, String.class.getCanonicalName(), null)).isNull();
+        assertThat(expressionEvaluator.evaluateLiteralExpression(null, List.class.getCanonicalName(), null)).isNull();
+        assertThat(expressionEvaluator.evaluateLiteralExpression(null, Map.class.getCanonicalName(), null)).isNull();
     }
 
     @Test
     public void evaluateUnaryExpression() {
-        assertTrue(expressionEvaluatorLocal.evaluateUnaryExpression(null, null, String.class));
-        assertTrue(expressionEvaluatorLocal.evaluateUnaryExpression(null, null, Map.class));
-        assertTrue(expressionEvaluatorLocal.evaluateUnaryExpression(null, null, List.class));
+        assertThat(expressionEvaluator.evaluateUnaryExpression(null, null, String.class)).is(successful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression(null, null, Map.class)).is(successful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression(null, null, List.class)).is(successful);
     }
 
     @Test
     public void convertList() {
-        // Test simple list
         ArrayNode jsonNodes = new ArrayNode(factory);
         ObjectNode objectNode = new ObjectNode(factory);
         objectNode.put(VALUE, "data");
         jsonNodes.add(objectNode);
 
-        List<Object> objects = expressionEvaluatorLocal.createAndFillList(jsonNodes,
-                                                                          new ArrayList<>(),
-                                                                          List.class.getCanonicalName(),
-                                                                          Collections.singletonList(String.class.getCanonicalName()));
-        assertEquals("data", objects.get(0));
+        List<Object> objects = expressionEvaluator.createAndFillList(jsonNodes, new ArrayList<>(), List.class.getCanonicalName(), List.of(String.class.getCanonicalName()));
+        
+        assertThat(objects).containsExactly("data");
     }
 
-    @SuppressWarnings("unchecked")
     @Test
-    public void convertObject() {
-        // single level
+    public void convertObject_simpleList() {
+        ObjectNode objectNode = new ObjectNode(factory);
+        objectNode.put("key1", "Polissena");
+        objectNode.put("key2", "Antonia");
+
+        Object result  = expressionEvaluator.createAndFillObject(objectNode, new HashMap<>(), Map.class.getCanonicalName(), List.of(String.class.getCanonicalName()));
+        
+        assertThat(result).isInstanceOf(Map.class);
+        
+        Map<String, Object> resultMap = (Map<String, Object>) result;        
+        assertThat(resultMap).hasSize(2).containsEntry("key1", "Polissena").containsEntry("key2", "Antonia");
+    }
+
+    
+    @Test
+    public void convertObject_singleLevel() {
         ObjectNode objectNode = new ObjectNode(factory);
         objectNode.put("age", "1");
+        objectNode.put("name", "FS");
 
-        Object result = expressionEvaluatorLocal.createAndFillObject(objectNode,
-                                                                     new HashMap<>(),
-                                                                     Map.class.getCanonicalName(),
-                                                                     Collections.singletonList(String.class.getCanonicalName()));
+        Object result = expressionEvaluator.createAndFillObject(objectNode, new HashMap<>(), Map.class.getCanonicalName(), List.of(String.class.getCanonicalName()));
 
-        assertTrue(result instanceof Map);
+        assertThat(result).isInstanceOf(Map.class);
+        
         Map<String, Object> resultMap = (Map<String, Object>) result;
-
-        assertEquals("1", resultMap.get("age"));
-
-        // nested object
-        objectNode.removeAll();
+        assertThat(resultMap).hasSize(2).containsEntry("age",  "1").containsEntry("name", "FS");
+    }
+    
+    @Test
+    public void convertObject_nestedObject() {
+        ObjectNode objectNode = new ObjectNode(factory);
         ObjectNode nestedObject = new ObjectNode(factory);
         objectNode.set("nested", nestedObject);
         nestedObject.put("field", "fieldValue");
 
-        result = expressionEvaluatorLocal.createAndFillObject(objectNode,
-                                                              new HashMap<>(),
-                                                              String.class.getCanonicalName(),
-                                                              emptyList());
+        Object result = expressionEvaluator.createAndFillObject(objectNode, new HashMap<>(), String.class.getCanonicalName(), List.of());
 
-        assertTrue(result instanceof Map);
-        resultMap = (Map<String, Object>) result;
-
-        assertEquals(1, resultMap.size());
+        assertThat(result).isInstanceOf(Map.class);
+        
+        Map<String, Object>resultMap = (Map<String, Object>) result;
+        assertThat(resultMap).hasSize(1);
+        
         Map<String, Object> nested = (Map<String, Object>) resultMap.get("nested");
-        assertEquals(1, nested.size());
-        assertEquals("fieldValue", nested.get("field"));
-
-        // nested list
-        objectNode.removeAll();
+        assertThat(nested).hasSize(1).containsEntry("field", "fieldValue");
+    }
+    
+    @Test
+    public void convertObject_nestedList() {
+        ObjectNode objectNode = new ObjectNode(factory);
         ArrayNode jsonNodes = new ArrayNode(factory);
         objectNode.set("listField", jsonNodes);
+        ObjectNode nestedObject = new ObjectNode(factory);
+        nestedObject.put("field", "fieldValue");
         jsonNodes.add(nestedObject);
 
-        result = expressionEvaluatorLocal.createAndFillObject(objectNode,
-                                                              new HashMap<>(),
-                                                              String.class.getCanonicalName(),
-                                                              emptyList());
+        Object result = expressionEvaluator.createAndFillObject(objectNode, new HashMap<>(), String.class.getCanonicalName(), List.of());
 
-        assertTrue(result instanceof Map);
-        resultMap = (Map<String, Object>) result;
+        assertThat(result).isInstanceOf(Map.class);
+        
+        Map<String, Object> resultMap = (Map<String, Object>) result;
+        assertThat(resultMap).hasSize(1);
 
-        assertEquals(1, resultMap.size());
         List<Map<String, Object>> nestedList = (List<Map<String, Object>>) resultMap.get("listField");
-        assertEquals(1, nestedList.size());
-        assertEquals("fieldValue", nestedList.get(0).get("field"));
+        assertThat(nestedList).hasSize(1);
+        assertThat(nestedList.get(0)).containsEntry("field", "fieldValue");
     }
 
     @Test
-    public void isSimpleTypeNode() {
-        assertFalse(expressionEvaluatorLocal.isSimpleTypeNode(new ArrayNode(factory)));
-
+    public void isSimpleTypeNode_emptyNode() {
+        assertThat(expressionEvaluator.isSimpleTypeNode(new ArrayNode(factory))).isFalse();
+    }
+    
+    @Test
+    public void isSimpleTypeNode_nodeWithValueField() {
         ObjectNode jsonNode = new ObjectNode(factory);
-
         jsonNode.set(VALUE, new TextNode("test"));
-        assertTrue(expressionEvaluatorLocal.isSimpleTypeNode(jsonNode));
 
-        jsonNode.set("otherField", new TextNode("testValue"));
-
-        assertFalse(expressionEvaluatorLocal.isSimpleTypeNode(jsonNode));
+        assertThat(expressionEvaluator.isSimpleTypeNode(jsonNode)).isTrue();
     }
 
     @Test
-    public void getSimpleTypeNodeTextValue() {
-        Assertions.assertThatThrownBy(() -> expressionEvaluatorLocal.getSimpleTypeNodeTextValue(new ArrayNode(factory)))
+    public void isSimpleTypeNode_nodeWithValueFieldAndOtherField() {
+        ObjectNode jsonNode = new ObjectNode(factory);
+        jsonNode.set(VALUE, new TextNode("test"));
+
+        assertThat(expressionEvaluator.isSimpleTypeNode(jsonNode)).isTrue();
+    }
+
+    @Test
+    public void isSimpleTypeNode_nodeWithOtherField() {
+        ObjectNode jsonNode = new ObjectNode(factory);
+        jsonNode.set("otherField", new TextNode("testValue"));
+        jsonNode.set(VALUE, new TextNode("test"));
+
+        assertThat(expressionEvaluator.isSimpleTypeNode(jsonNode)).isFalse();
+    }
+    
+    @Test
+    public void getSimpleTypeNodeTextValue_noSimpleTypeCausesException() {
+        assertThatThrownBy(() -> expressionEvaluator.getSimpleTypeNodeTextValue(new ArrayNode(factory)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Parameter does not contains a simple type");
+    }
 
+    @Test
+    public void getSimpleTypeNodeTextValue_textNode() {
         ObjectNode jsonNode = new ObjectNode(factory);
-
         jsonNode.set(VALUE, new TextNode("testValue"));
-        assertEquals("testValue", expressionEvaluatorLocal.getSimpleTypeNodeTextValue(jsonNode));
 
+        assertThat(expressionEvaluator.getSimpleTypeNodeTextValue(jsonNode)).isEqualTo("testValue");
+    }
+    
+    @Test
+    public void getSimpleTypeNodeTextValue_intNode() {
+        ObjectNode jsonNode = new ObjectNode(factory);
         jsonNode.set(VALUE, new IntNode(10));
-        assertNull(expressionEvaluatorLocal.getSimpleTypeNodeTextValue(jsonNode));
-    }
 
+        assertThat(expressionEvaluator.getSimpleTypeNodeTextValue(jsonNode)).isNull();
+    }
+    
     @Test
-    public void isNodeEmpty() {
+    public void isNodeEmpty_objectNode() {
         ObjectNode objectNode = new ObjectNode(factory);
-        assertTrue(expressionEvaluatorLocal.isNodeEmpty(objectNode));
-        objectNode.set("empty array", new ArrayNode(factory));
-        assertTrue(expressionEvaluatorLocal.isNodeEmpty(objectNode));
-        objectNode.set("key", new TextNode(VALUE));
-        assertFalse(expressionEvaluatorLocal.isNodeEmpty(objectNode));
-
-        ArrayNode arrayNode = new ArrayNode(factory);
-        assertTrue(expressionEvaluatorLocal.isNodeEmpty(arrayNode));
-        arrayNode.add(new TextNode(VALUE));
-        assertFalse(expressionEvaluatorLocal.isNodeEmpty(arrayNode));
-
-        assertTrue(expressionEvaluatorLocal.isNodeEmpty(new TextNode("")));
-        assertTrue(expressionEvaluatorLocal.isNodeEmpty(new TextNode(null)));
-        assertFalse(expressionEvaluatorLocal.isNodeEmpty(new TextNode(VALUE)));
+        
+        assertThat(expressionEvaluator.isNodeEmpty(objectNode)).isTrue();
     }
 
     @Test
-    public void isListEmpty() {
+    public void isNodeEmpty_arrayNode() {
+        ArrayNode arrayNode = new ArrayNode(factory);
+
+        assertThat(expressionEvaluator.isNodeEmpty(arrayNode)).isTrue();
+    }
+
+    @Test
+    public void isNodeEmpty_objectNodeWithArrayNode() {
+        ObjectNode objectNode = new ObjectNode(factory);
+        objectNode.set("empty array", new ArrayNode(factory));
+
+        assertThat(expressionEvaluator.isNodeEmpty(objectNode)).isTrue();
+    }
+
+    @Test
+    public void isNodeEmpty_objectNodeWithTextNode() {
+        ObjectNode objectNode = new ObjectNode(factory);
+        objectNode.set("key", new TextNode(VALUE));
+
+        assertThat(expressionEvaluator.isNodeEmpty(objectNode)).isFalse();
+    }
+    
+
+    @Test
+    public void isNodeEmpty_arrayNodeWithTextNode() {
+        ArrayNode arrayNode = new ArrayNode(factory);
+        arrayNode.add(new TextNode(VALUE));
+        
+        assertThat(expressionEvaluator.isNodeEmpty(arrayNode)).isFalse();
+    }
+    
+    @Test
+    public void isNodeEmpty_textNode() {
+        assertThat(expressionEvaluator.isNodeEmpty(new TextNode(""))).isTrue();
+        assertThat(expressionEvaluator.isNodeEmpty(new TextNode(null))).isTrue();
+        assertThat(expressionEvaluator.isNodeEmpty(new TextNode(VALUE))).isFalse();
+    }
+    
+    
+    @Test
+    public void isListEmpty_noNode() {
         ArrayNode json = new ArrayNode(factory);
-        assertTrue(expressionEvaluatorLocal.isListEmpty(json));
+        
+        assertThat(expressionEvaluator.isListEmpty(json)).isTrue();
+    }
+
+    @Test
+    public void isListEmpty_emptyNode() {
+        ArrayNode json = new ArrayNode(factory);
         ObjectNode nestedNode = new ObjectNode(factory);
         json.add(nestedNode);
-        assertTrue(expressionEvaluatorLocal.isListEmpty(json));
-        nestedNode.set("emptyField", new TextNode(""));
-        assertTrue(expressionEvaluatorLocal.isListEmpty(json));
-        nestedNode.set("notEmptyField", new TextNode("text"));
-        assertFalse(expressionEvaluatorLocal.isListEmpty(json));
+        
+        assertThat(expressionEvaluator.isListEmpty(json)).isTrue();
     }
 
+    
     @Test
-    public void isObjectEmpty() {
+    public void isListEmpty_nodeWithEmptyField() {
+        ArrayNode json = new ArrayNode(factory);
+        ObjectNode nestedNode = new ObjectNode(factory);
+        json.add(nestedNode);
+        nestedNode.set("emptyField", new TextNode(""));
+        
+        assertThat(expressionEvaluator.isListEmpty(json)).isTrue();
+    }
+    
+    @Test
+    public void isListEmpty_nodeWithNonEmptyField() {
+        ArrayNode json = new ArrayNode(factory);
+        ObjectNode nestedNode = new ObjectNode(factory);
+        json.add(nestedNode);
+        nestedNode.set("notEmptyField", new TextNode("text"));
+        
+        assertThat(expressionEvaluator.isListEmpty(json)).isFalse();
+    }
+    
+
+    @Test
+    public void isObjectEmpty_nodeWithNoField() {
         ObjectNode json = new ObjectNode(factory);
-        assertTrue(expressionEvaluatorLocal.isObjectEmpty(json));
+
+        assertThat(expressionEvaluator.isObjectEmpty(json)).isTrue();
+    }
+    
+    @Test
+    public void isObjectEmpty_nodeWithEmptyField() {
+        ObjectNode json = new ObjectNode(factory);
         ObjectNode nestedNode = new ObjectNode(factory);
         json.set("emptyField", nestedNode);
-        assertTrue(expressionEvaluatorLocal.isObjectEmpty(json));
-        nestedNode.set("notEmptyField", new TextNode("text"));
-        assertFalse(expressionEvaluatorLocal.isObjectEmpty(json));
+
+        assertThat(expressionEvaluator.isObjectEmpty(json)).isTrue();
     }
+    
+    @Test
+    public void isObjectEmpty_nodeWithNonEmptyField() {
+        ObjectNode json = new ObjectNode(factory);
+        ObjectNode nestedNode = new ObjectNode(factory);
+        json.set("emptyField", nestedNode);
+        nestedNode.set("notEmptyField", new TextNode("text"));
+
+        assertThat(expressionEvaluator.isObjectEmpty(json)).isFalse();
+    }
+
 
     @Test
     public void isEmptyText() {
-        assertTrue(expressionEvaluatorLocal.isEmptyText(new TextNode("")));
-        assertFalse(expressionEvaluatorLocal.isEmptyText(new TextNode(VALUE)));
-        assertTrue(expressionEvaluatorLocal.isEmptyText(new ObjectNode(factory)));
+        assertThat(expressionEvaluator.isEmptyText(new TextNode(""))).isTrue();
+        assertThat(expressionEvaluator.isEmptyText(new TextNode(VALUE))).isFalse();
+        assertThat(expressionEvaluator.isEmptyText(new ObjectNode(factory))).isTrue();
     }
 
     @Test
     public void isStructuredInput() {
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(List.class.getCanonicalName()));
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(ArrayList.class.getCanonicalName()));
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(LinkedList.class.getCanonicalName()));
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(Map.class.getCanonicalName()));
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(HashMap.class.getCanonicalName()));
-        assertTrue(expressionEvaluatorLocal.isStructuredInput(LinkedHashMap.class.getCanonicalName()));
-        assertFalse(expressionEvaluatorLocal.isStructuredInput(Set.class.getCanonicalName()));
-        assertFalse(expressionEvaluatorLocal.isStructuredInput(Integer.class.getCanonicalName()));
-        assertFalse(expressionEvaluatorLocal.isStructuredInput(String.class.getCanonicalName()));
+        assertThat(expressionEvaluator.isStructuredInput(List.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(ArrayList.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(LinkedList.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(Map.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(HashMap.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(LinkedHashMap.class.getCanonicalName())).isTrue();
+        assertThat(expressionEvaluator.isStructuredInput(Set.class.getCanonicalName())).isFalse();
+        assertThat(expressionEvaluator.isStructuredInput(Integer.class.getCanonicalName())).isFalse();
+        assertThat(expressionEvaluator.isStructuredInput(String.class.getCanonicalName())).isFalse();
     }
 }
