@@ -1,161 +1,192 @@
-/*
- * Copyright 2018 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.drools.scenariosimulation.backend.expression;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import com.fasterxml.jackson.databind.node.TextNode;
-import org.assertj.core.api.Assertions;
 import org.drools.scenariosimulation.backend.model.ListMapClass;
+import org.junit.Before;
 import org.junit.Test;
 
-import static org.drools.scenariosimulation.api.utils.ConstantsHolder.VALUE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import org.assertj.core.api.Condition;
 
 public class BaseExpressionEvaluatorTest {
+	
+	private Condition<ExpressionEvaluatorResult> successful= new Condition<>(x -> x.isSuccessful(), "isSuccessful");
+	private Condition<ExpressionEvaluatorResult> notSuccessful= new Condition<>(x -> !x.isSuccessful(), "isNotSuccessful");
 
     private final static ClassLoader classLoader = BaseExpressionEvaluatorTest.class.getClassLoader();
-    private final static AbstractExpressionEvaluator expressionEvaluator = new BaseExpressionEvaluator(classLoader);
-
-    @Test
-    public void evaluateLiteralExpression() {
-        String raw = "";
-        assertEquals(raw, expressionEvaluator.evaluateLiteralExpression(raw, Object.class.getCanonicalName(), Collections.emptyList()));
-
-        raw = "SimpleString";
-        assertEquals(raw, expressionEvaluator.evaluateLiteralExpression(raw, String.class.getCanonicalName(), Collections.emptyList()));
-
-        raw = "= SimpleString";
-        assertEquals("SimpleString", expressionEvaluator.evaluateLiteralExpression(raw, String.class.getCanonicalName(), Collections.emptyList()));
-
-        assertNull(expressionEvaluator.evaluateLiteralExpression(null, String.class.getCanonicalName(), Collections.emptyList()));
+    private AbstractExpressionEvaluator expressionEvaluator;
+    
+    @Before
+    public void setUp() {
+    	expressionEvaluator = new BaseExpressionEvaluator(classLoader);
     }
 
     @Test
-    public void createObjectTest() {
-        assertNotNull(expressionEvaluator.createObject(String.class.getCanonicalName(), Collections.emptyList()));
-        assertTrue(expressionEvaluator.createObject(Map.class.getCanonicalName(), Arrays.asList(String.class.getCanonicalName(), String.class.getCanonicalName())) instanceof Map);
+    public void evaluateLiteralExpression() {
+        assertThat(expressionEvaluator.evaluateLiteralExpression("", Object.class.getCanonicalName(), List.of())).isEqualTo("");
 
-        Assertions.assertThatThrownBy(() -> expressionEvaluator.createObject("com.invalid.class.Name", Collections.emptyList())).isInstanceOf(IllegalArgumentException.class)
+        assertThat(expressionEvaluator.evaluateLiteralExpression("SimpleString", String.class.getCanonicalName(), List.of())).isEqualTo("SimpleString");
+
+        assertThat(expressionEvaluator.evaluateLiteralExpression("= SimpleString", String.class.getCanonicalName(), List.of())).isEqualTo("SimpleString");
+
+        assertThat(expressionEvaluator.evaluateLiteralExpression(null, String.class.getCanonicalName(), List.of())).isNull();
+    }
+
+    @Test
+    public void createObject() {
+        assertThat(expressionEvaluator.createObject(String.class.getCanonicalName(), List.of())).isNotNull();
+        assertThat(expressionEvaluator.createObject(Map.class.getCanonicalName(), List.of(String.class.getCanonicalName(), String.class.getCanonicalName()))).isInstanceOf(Map.class);
+
+        assertThatThrownBy(() -> expressionEvaluator.createObject("com.invalid.class.Name", List.of())).isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("Impossible to instantiate com.invalid.class.Name");
     }
 
     @Test
     public void verifyNullTest() {
-        assertTrue(expressionEvaluator.verifyResult("[]", null, null));
-        assertFalse(expressionEvaluator.verifyResult("[{\"" + VALUE + "\" : \"result\"}]", null, null));
+        assertThat(expressionEvaluator.verifyResult("[]", null, null)).is(successful);
+        assertThat(expressionEvaluator.verifyResult("[{\"value\" : \"result\"}]", null, null)).is(notSuccessful);
     }
 
     @Test
     public void nullResultTest() {
-        assertFalse(expressionEvaluator.evaluateUnaryExpression("> 1", null, null));
-        assertTrue(expressionEvaluator.evaluateUnaryExpression("", null, null));
-        assertTrue(expressionEvaluator.evaluateUnaryExpression(null, null, null));
+        assertThat(expressionEvaluator.evaluateUnaryExpression("> 1", null, null)).is(notSuccessful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression("", null, null)).is(successful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression(null, null, null)).is(successful);
 
-        assertTrue(expressionEvaluator.evaluateUnaryExpression("{}", null, Map.class));
-        assertTrue(expressionEvaluator.evaluateUnaryExpression("[]", null, List.class));
+        assertThat(expressionEvaluator.evaluateUnaryExpression("{}", null, Map.class)).is(successful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression("[]", null, List.class)).is(successful);
 
-        String mapOfListJson = "{\"key1\" : [{\"" + VALUE + "\" : \"value1\"}, {\"" + VALUE + "\" : \"value2\"}]}";
-        Map<String, List<String>> mapOfListToCheck = new HashMap<>();
-        assertFalse(expressionEvaluator.evaluateUnaryExpression(mapOfListJson, mapOfListToCheck, Map.class));
+        String mapOfListJson = "{\"key1\" : [{\"value\" : \"value1\"}, {\"value\" : \"value2\"}]}";
+        assertThat(expressionEvaluator.evaluateUnaryExpression(mapOfListJson, Map.of(), Map.class)).is(notSuccessful);
     }
+    
+    public void convertResult_list() {
+        String listJsonString = "[{\"value\" : \"10\"}, {\"value\" : \"12\"}]";
 
-    @SuppressWarnings("unchecked")
+        List<Integer> result = (List<Integer>) expressionEvaluator.convertResult(listJsonString, List.class.getCanonicalName(), List.of(Integer.class.getCanonicalName()));
+
+        assertThat(result).hasSize(2);
+        assertThat(result).containsExactly(10, 12);
+    }
+    
     @Test
-    public void mapOfSimpleTypeTest() {
+    public void convertResult_mapOfStringToString() {
+        List<String> genericClasses = List.of(String.class.getCanonicalName(), String.class.getCanonicalName());
+        String givenWorkbenchMapString = "{ \"Home\": { \"value\": \"123 Any Street\" } }";
 
-        String givenWorkbenchMapString = "{ \"Home\": { \"" + VALUE + "\": \"123 Any Street\" } }";
-        List<String> genericClasses = new ArrayList<>();
-        genericClasses.add(String.class.getCanonicalName());
-        genericClasses.add(String.class.getCanonicalName());
         Map<String, String> parsedWorkbench = ((Map<String, String>) expressionEvaluator.convertResult(givenWorkbenchMapString, Map.class.getCanonicalName(), genericClasses));
 
-        assertEquals(1, parsedWorkbench.size());
-        assertNotNull(parsedWorkbench.get("Home"));
-        assertEquals("123 Any Street", parsedWorkbench.get("Home"));
+        assertThat(parsedWorkbench).hasSize(1).containsEntry("Home", "123 Any Street");
+    }
+    
+    @Test
+    public void evaluateUnaryExpression_mapOfStringToString() {
+        String stringToString = "{\"key1\" : {\"value\" : \"value1\"}, \"key2\" : {\"value\" : \"value2\"}}";
 
-        String givenWorkbenchMapInteger = "{ \"Home\": { \"" + VALUE + "\": \"100\" } }";
-        genericClasses.clear();
-        genericClasses.add(String.class.getCanonicalName());
-        genericClasses.add(Integer.class.getCanonicalName());
-        Map<String, Integer> parsedIntegerFromMap = ((Map<String, Integer>) expressionEvaluator.convertResult(givenWorkbenchMapInteger, Map.class.getCanonicalName(), genericClasses));
+        assertThat(expressionEvaluator.evaluateUnaryExpression(stringToString, Map.of("key1", "value1"), Map.class)).is(notSuccessful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression(stringToString, Map.of("key1", "value1", "key2", "value2"), Map.class)).is(successful);
+    }
+    
+    @Test
+    public void evaluateUnaryExpression_mapOfStringToString_empty() {
+        String mapOfStringJson1 = "{\"key1\" : {\"value\" : \"\"}}";
 
-        assertEquals(1, parsedIntegerFromMap.size());
-        assertNotNull(parsedIntegerFromMap.get("Home"));
-        assertEquals(100, parsedIntegerFromMap.get("Home").intValue());
+        assertThat(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson1, Map.of(), Map.class)).is(successful);
+        assertThat(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson1, Map.of("key1", "value1"), Map.class)).is(successful);
+    }
 
-        String expectWorkbenchMapInteger = "{ \"Home\": { \"" + VALUE + "\": \"> 100\" } }";
-        genericClasses.clear();
-        genericClasses.add(String.class.getCanonicalName());
-        genericClasses.add(Integer.class.getCanonicalName());
-        Map<String, Integer> resultToTest = new HashMap<>();
-        resultToTest.put("Home", 120);
-        assertTrue(expressionEvaluator.verifyResult(expectWorkbenchMapInteger, resultToTest, null));
-        resultToTest.put("Home", 20);
-        assertFalse(expressionEvaluator.verifyResult(expectWorkbenchMapInteger, resultToTest, null));
+    
+    @Test
+    public void convertResult_mapOfStringToInteger() {
+        List<String> genericClasses = List.of(String.class.getCanonicalName(), Integer.class.getCanonicalName());
+        String givenWorkbenchMapInteger = "{ \"Home\": { \"value\": \"100\" } }";
 
-        String mapOfStringJson = "{\"key1\" : {\"" + VALUE + "\" : \"value1\"}, \"key2\" : {\"" + VALUE + "\" : \"value2\"}}";
-        Map<String, String> mapStringStringToCheck = new HashMap<>();
-        mapStringStringToCheck.put("key1", "value1");
-        assertFalse(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson, mapStringStringToCheck, Map.class));
-        mapStringStringToCheck.put("key2", "value2");
-        assertTrue(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson, mapStringStringToCheck, Map.class));
+        Map<String, Integer> parsedMap = ((Map<String, Integer>) expressionEvaluator.convertResult(givenWorkbenchMapInteger, Map.class.getCanonicalName(), genericClasses));
 
-        String mapOfStringJson1 = "{\"key1\" : {\"" + VALUE + "\" : \"\"}}";
-        Map<String, String> mapStringStringToCheck1 = new HashMap<>();
-        assertTrue(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson1, mapStringStringToCheck1, Map.class));
-        mapStringStringToCheck1.put("key1", "value1");
-        assertTrue(expressionEvaluator.evaluateUnaryExpression(mapOfStringJson1, mapStringStringToCheck1, Map.class));
+        assertThat(parsedMap).hasSize(1).containsEntry("Home", 100);
+    }
+    
+
+
+    @SuppressWarnings("unchecked")
+    @Test
+    public void convertResult_listMapToString() {
+        String mapJsonString = "{\"first\": {\"name\": \"John\"}}";
+
+        Map<String, ListMapClass> parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
+                                                                                                            List.of(ListMapClass.class.getCanonicalName()));
+
+        assertThat(parsedMap).hasSize(1);
+        assertThat(parsedMap.get("first").getName()).isEqualTo("John");
+    }
+    
+    @SuppressWarnings("unchecked")
+    @Test
+    public void convertResult_listMapToList() {
+        String mapJsonString = "{\"first\": {\"siblings\": [{\"name\" : \"John\"}]}}";
+        
+        Map<String, ListMapClass> parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
+                                                                                  List.of(ListMapClass.class.getCanonicalName()));
+        assertThat(parsedMap).hasSize(1);
+        assertThat(parsedMap.get("first").getSiblings().get(0).getName()).isEqualTo("John");
+    }
+    
+    
+    @SuppressWarnings("unchecked")
+    @Test
+    public void convertResult_listMapToListMap() {
+        String mapJsonString = "{\"first\": {\"phones\": {\"number\" : \"1\"}}}";
+
+        Map<String, ListMapClass> parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
+                                                                                  List.of(ListMapClass.class.getCanonicalName()));
+
+        assertThat(parsedMap).hasSize(1);
+        assertThat(parsedMap.get("first").getPhones().get("number")).isEqualTo((Integer) 1);
     }
 
     @SuppressWarnings("unchecked")
     @Test
-    public void mapOfComplexTypeTest() {
-        String mapJsonString = "{\"first\": {\"name\": \"John\"}}";
-        Map<String, ListMapClass> parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
-                                                                                                            Collections.singletonList(ListMapClass.class.getCanonicalName()));
+    public void convertResult_listOfComplexTypes() {
 
-        assertEquals(1, parsedMap.size());
-        assertEquals("John", parsedMap.get("first").getName());
+        String listJsonString = "[{\"name\": \"John\"}, " +
+                "{\"name\": \"John\", \"names\" : [{\"value\": \"Anna\"}, {\"value\": \"Mario\"}]}]";
 
-        mapJsonString = "{\"first\": {\"siblings\": [{\"name\" : \"John\"}]}}";
-        parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
-                                                                                  Collections.singletonList(ListMapClass.class.getCanonicalName()));
-        assertEquals(1, parsedMap.size());
-        assertEquals("John", parsedMap.get("first").getSiblings().get(0).getName());
+        List<ListMapClass> parsedValue = (List<ListMapClass>) expressionEvaluator.convertResult(listJsonString, List.class.getCanonicalName(),
+                                                                                                List.of(ListMapClass.class.getCanonicalName()));
 
-        mapJsonString = "{\"first\": {\"phones\": {\"number\" : \"1\"}}}";
-        parsedMap = (Map<String, ListMapClass>) expressionEvaluator.convertResult(mapJsonString, Map.class.getCanonicalName(),
-                                                                                  Collections.singletonList(ListMapClass.class.getCanonicalName()));
-
-        assertEquals(1, parsedMap.size());
-        assertEquals((Integer) 1, parsedMap.get("first").getPhones().get("number"));
-
-        mapJsonString = "{\"first\": {\"phones\": {\"number\" : \"> 1\"}}}";
+        assertThat(parsedValue).hasSize(2);
+        assertThat(parsedValue.get(1).getNames()).hasSize(2).containsExactly("Anna", "Mario");
+    }
+    
+    @Test
+    public void verifyResult_mapOfMapsofMaps_successful() {
+        String mapJsonString = "{\"first\": {\"phones\": {\"number\" : \"> 1\"}}}";
 
         Map<String, ListMapClass> toCheck = new HashMap<>();
         ListMapClass element = new ListMapClass();
@@ -164,64 +195,80 @@ public class BaseExpressionEvaluatorTest {
         element.setPhones(phones);
         toCheck.put("first", element);
 
-        assertTrue(expressionEvaluator.verifyResult(mapJsonString, toCheck, null));
-        phones.put("number", -1);
-        assertFalse(expressionEvaluator.verifyResult(mapJsonString, toCheck, null));
+        assertThat(expressionEvaluator.verifyResult(mapJsonString, toCheck, null)).is(successful);
     }
+
+    @Test
+    public void verifyResult_mapOfMapsofMaps_notSuccessful() {
+        String mapJsonString = "{\"first\": {\"phones\": {\"number\" : \"> 1\"}}}";
+
+        Map<String, ListMapClass> toCheck = new HashMap<>();
+        ListMapClass element = new ListMapClass();
+        Map<String, Integer> phones = new HashMap<>();
+        phones.put("number", 10);
+        element.setPhones(phones);
+        phones.put("number", -1);
+
+        assertThat(expressionEvaluator.verifyResult(mapJsonString, toCheck, null)).is(notSuccessful);
+    }
+
 
     @SuppressWarnings("unchecked")
     @Test
-    public void listOfComplexTypeTest() {
+    public void verifyResult_listOfComplexTypeTest_success() {
 
         String listJsonString = "[{\"name\": \"John\"}, " +
-                "{\"name\": \"John\", \"names\" : [{\"" + VALUE + "\": \"Anna\"}, {\"" + VALUE + "\": \"Mario\"}]}]";
+                "{\"name\": \"John\", \"names\" : [{\"value\": \"Anna\"}, {\"value\": \"Mario\"}]}]";
 
         List<ListMapClass> parsedValue = (List<ListMapClass>) expressionEvaluator.convertResult(listJsonString, List.class.getCanonicalName(),
-                                                                                                Collections.singletonList(ListMapClass.class.getCanonicalName()));
+                                                                                                List.of(ListMapClass.class.getCanonicalName()));
 
-        assertEquals(2, parsedValue.size());
-        assertEquals(2, parsedValue.get(1).getNames().size());
-        assertTrue(parsedValue.get(1).getNames().contains("Anna"));
-
-        assertTrue(expressionEvaluator.verifyResult(listJsonString, parsedValue, null));
-
-        parsedValue.get(1).setNames(new ArrayList<>());
-        assertFalse(expressionEvaluator.verifyResult(listJsonString, parsedValue, null));
+        assertThat(expressionEvaluator.verifyResult(listJsonString, parsedValue, null)).is(successful);
     }
-
+    
     @SuppressWarnings("unchecked")
     @Test
+    public void verifyResult_listOfComplexTypeTest_failure() {
+        String listJsonString = "[{\"name\": \"John\"}, " +
+                "{\"name\": \"John\", \"names\" : [{\"value\": \"Anna\"}, {\"value\": \"Mario\"}]}]";
+
+        List<ListMapClass> parsedValue = (List<ListMapClass>) expressionEvaluator.convertResult(listJsonString, List.class.getCanonicalName(),
+                                                                                                List.of(ListMapClass.class.getCanonicalName()));
+        parsedValue.get(1).setNames(new ArrayList<>());
+
+        assertThat(expressionEvaluator.verifyResult(listJsonString, parsedValue, null)).is(notSuccessful);
+    }
+    
+    @Test
+    public void verifyResult_mapOfStringToInteger() {
+        String expectWorkbenchMapInteger = "{ \"Home\": { \"value\": \"> 100\" } }";
+
+        assertThat(expressionEvaluator.verifyResult(expectWorkbenchMapInteger, Map.of("Home", 120), null)).is(successful);
+        assertThat(expressionEvaluator.verifyResult(expectWorkbenchMapInteger, Map.of("Home", 10), null)).is(notSuccessful);
+    }    
+    
+    @Test
     public void listOfSimpleTypeTest() {
-        String listJsonString = "[{\"" + VALUE + "\" : \"10\"}, {\"" + VALUE + "\" : \"12\"}]";
+        assertThat(expressionEvaluator.verifyResult("[{\"value\" : \"> 10\"}]", List.of(13), null)).is(successful);
 
-        List<Integer> result = (List<Integer>) expressionEvaluator.convertResult(listJsonString, List.class.getCanonicalName(), Collections.singletonList(Integer.class.getCanonicalName()));
+        assertThat(expressionEvaluator.verifyResult("[{\"value\" : \"> 100\"}]", List.of(13), null)).is(notSuccessful);
 
-        assertEquals(2, result.size());
-        assertTrue(result.contains(10));
-
-        listJsonString = "[{\"" + VALUE + "\" : \"> 10\"}]";
-        List<Integer> toCheck = Collections.singletonList(13);
-
-        assertTrue(expressionEvaluator.verifyResult(listJsonString, toCheck, null));
-
-        listJsonString = "[{\"" + VALUE + "\" : \"> 100\"}]";
-        assertFalse(expressionEvaluator.verifyResult(listJsonString, toCheck, null));
-
-        listJsonString = "[{\"" + VALUE + "\" : \"\"}]";
-        assertTrue(expressionEvaluator.verifyResult(listJsonString, toCheck, null));
+        assertThat(expressionEvaluator.verifyResult("[{\"value\" : \"\"}]", List.of(13), null)).is(successful);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void expressionListVerifyResultTest() {
         String expressionCollectionJsonString = new TextNode("10").toString();
-        List<BigDecimal> contextValue = Collections.singletonList(BigDecimal.valueOf(10));
-        assertTrue(expressionEvaluator.verifyResult(expressionCollectionJsonString, contextValue, List.class));
+        List<BigDecimal> contextValue = List.of(BigDecimal.valueOf(10));
+        
+        assertThatIllegalArgumentException().isThrownBy(() -> expressionEvaluator.verifyResult(expressionCollectionJsonString, contextValue, List.class));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void expressionMapVerifyResultTest() {
         String expressionCollectionJsonString = new TextNode("{key_a : 1}").toString();
-        Map<String, BigDecimal> contextValue = Collections.singletonMap("key_a", BigDecimal.valueOf(1));
-        assertTrue(expressionEvaluator.verifyResult(expressionCollectionJsonString, contextValue, Map.class));
+        Map<String, BigDecimal> contextValue = Map.of("key_a", BigDecimal.valueOf(1));
+        
+        assertThatIllegalArgumentException().isThrownBy(() -> expressionEvaluator.verifyResult(expressionCollectionJsonString, contextValue, Map.class));
     }
 }
