@@ -1,27 +1,33 @@
-/*
- * Copyright 2019 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.drools.scenariosimulation.backend.expression;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import com.fasterxml.jackson.databind.node.TextNode;
+
+import org.assertj.core.api.Condition;
+import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.mvel2.CompileException;
@@ -30,34 +36,39 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.drools.scenariosimulation.api.utils.ConstantsHolder.ACTUAL_VALUE_IDENTIFIER;
 import static org.drools.scenariosimulation.api.utils.ConstantsHolder.MVEL_ESCAPE_SYMBOL;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
 
 public class MVELExpressionEvaluatorTest {
+	
+	private Condition<ExpressionEvaluatorResult> successful= new Condition<>(x -> x.isSuccessful(), "isSuccessful");
+	private Condition<ExpressionEvaluatorResult> notSuccessful= new Condition<>(x -> !x.isSuccessful(), "isSuccessful");
 
-    MVELExpressionEvaluator evaluator = new MVELExpressionEvaluator(MVELExpressionEvaluatorTest.class.getClassLoader());
+    private MVELExpressionEvaluator evaluator;
 
+    @Before
+    public void setUp() {
+        evaluator = new MVELExpressionEvaluator(MVELExpressionEvaluatorTest.class.getClassLoader());
+    }
+    
     @Test
     public void evaluateUnaryExpression() {
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", \"Test\")"), "Test", String.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", " + "\"Test\")"), "Test1", String.class));
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression("1"), 1, Integer.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression("2"), 1, Integer.class));
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", \"Test\")"), "Test", String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", " + "\"Test\")"), "Test1", String.class)).is(notSuccessful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("1"), 1, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("2"), 1, Integer.class)).is(notSuccessful);
 
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression(""), null, String.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression(""), "", String.class));
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), null, String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), "", String.class)).is(notSuccessful);
 
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression(null), null, String.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression(null), "null", String.class));
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), null, String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "null", String.class)).is(notSuccessful);
 
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression("\"\""), "", String.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression(null), "", String.class));
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("\"\""), "", String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "", String.class)).is(notSuccessful);
 
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 123, Integer.class));
-        assertTrue(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 321, Integer.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 321, Integer.class));
-        assertFalse(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 123, Integer.class));
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 123, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 321, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 321, Integer.class)).is(notSuccessful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 123, Integer.class)).is(notSuccessful);
 
         assertThatThrownBy(() -> evaluator.evaluateUnaryExpression(null, "", String.class))
                 .isInstanceOf(IllegalArgumentException.class)
@@ -65,106 +76,67 @@ public class MVELExpressionEvaluatorTest {
     }
 
     @Test
-    public void evaluateLiteralExpression() {
-        assertEquals(1, evaluator.evaluateLiteralExpression(mvelExpression("1"), Integer.class.getCanonicalName(),
-                                                            Collections.emptyList()
-        ));
+    public void evaluateLiteralExpression_many() {
+        assertThat(evaluateLiteralExpression("1", Integer.class)).isEqualTo(1);
 
-        assertEquals("Value", evaluator.evaluateLiteralExpression(mvelExpression("\"Value\""), String.class.getCanonicalName(),
-                                                                  Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("\"Value\"", String.class)).isEqualTo("Value");
 
-        assertEquals(6, evaluator.evaluateLiteralExpression(mvelExpression("2 * 3"), Integer.class.getCanonicalName(),
-                                                            Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("2 * 3", Integer.class)).isEqualTo(6);
 
-        assertEquals(14, evaluator.evaluateLiteralExpression(mvelExpression("-1 + (3 * 5)"), Integer.class.getCanonicalName(),
-                                                             Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("-1 + (3 * 5)", Integer.class)).isEqualTo(14);
 
-        assertEquals(Arrays.asList("Jim"), evaluator.evaluateLiteralExpression(mvelExpression("[\"Jim\"]"), ArrayList.class.getCanonicalName(),
-                                                                               Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("[\"Jim\"]", ArrayList.class)).isEqualTo(List.of("Jim"));
 
-        assertEquals(Collections.emptyList(), evaluator.evaluateLiteralExpression(mvelExpression("[]"), ArrayList.class.getCanonicalName(),
-                                                                                  Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("[]", ArrayList.class)).isEqualTo(List.of());
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("\"abc..\"[2]"), Character.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo('c');
+        assertThat(evaluateLiteralExpression("\"abc..\"[2]", Character.class)).isEqualTo('c');
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("1.234B"), BigDecimal.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new BigDecimal("1.234"));
+        assertThat(evaluateLiteralExpression("1.234B", BigDecimal.class)).isEqualTo(new BigDecimal("1.234"));
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("1.234d"), Double.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(Double.valueOf("1.234"));
+        assertThat(evaluateLiteralExpression("1.234d", Double.class)).isEqualTo(Double.valueOf("1.234"));
 
-        assertEquals("Value", evaluator.evaluateLiteralExpression("# \"Value\"", String.class.getCanonicalName(), Collections.emptyList()));
+        assertThat(evaluateLiteralExpression("\"Value\"", String.class)).isEqualTo("Value");
 
-        assertEquals(3, evaluator.evaluateLiteralExpression("# a = 1; b = 2; a+b;", Integer.class.getCanonicalName(), Collections.emptyList()));
+        assertThat(evaluateLiteralExpression("a = 1; b = 2; a+b;", Integer.class)).isEqualTo(3);
 
-        assertEquals("Test", evaluator.evaluateLiteralExpression("# a = \"Te\"; b = \"st\"; a+b;", String.class.getCanonicalName(), Collections.emptyList()));
+        assertThat(evaluateLiteralExpression("a = \"Te\"; b = \"st\"; a+b;", String.class)).isEqualTo("Test");
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("# a = 1 b = 2 a+b;", Integer.class.getCanonicalName(), Collections.emptyList()))
+        assertThatThrownBy(() -> evaluateLiteralExpression("a = 1 b = 2 a+b;", Integer.class))
                 .isInstanceOf(CompileException.class);
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("# a = 1; a+b;", Integer.class.getCanonicalName(), Collections.emptyList()))
+        assertThatThrownBy(() -> evaluateLiteralExpression("a = 1; a+b;", Integer.class))
                 .isInstanceOf(CompileException.class);
 
-        assertEquals(Arrays.asList("Bob", "Michael"), evaluator.evaluateLiteralExpression(mvelExpression("a = \"Bob\";\n" +
-                                                                                                                 "test = new java.util.ArrayList();\n" +
-                                                                                                                 "test.add(a);\n" +
-                                                                                                                 "test.add(\"Michael\");\n" +
-                                                                                                                 "test;"),
-                                                                                          ArrayList.class.getCanonicalName(),
-                                                                                          Collections.emptyList()
-        ));
+        assertThat(evaluateLiteralExpression("a = \"Bob\";\n" +
+                "test = new java.util.ArrayList();\n" +
+                "test.add(a);\n" +
+                "test.add(\"Michael\");\n" +
+                "test;",
+                ArrayList.class)).isEqualTo(List.of("Bob", "Michael"));
 
-        HashMap<String, String> expectedMap = new HashMap<String, String>() {{
-            put("Jim", "Person");
-        }};
+        Map<String, String> expectedMap = Map.of("Jim", "Person");
 
-        assertEquals(expectedMap, evaluator.evaluateLiteralExpression(mvelExpression("[\"Jim\" : \"Person\"]"),
-                                                                      HashMap.class.getCanonicalName(),
-                                                                      Collections.emptyList()
-        ));
-        assertEquals(expectedMap, evaluator.evaluateLiteralExpression(mvelExpression("a = \"Person\";\n" +
-                                                                                             "test = new java.util.HashMap();\n" +
-                                                                                             "test.put(\"Jim\", a);\n" +
-                                                                                             "test;"),
-                                                                      HashMap.class.getCanonicalName(),
-                                                                      Collections.emptyList()
-        ));
-        assertEquals(expectedMap,
-                     evaluator.evaluateLiteralExpression(
-                             mvelExpression("a = \"Person\";test = new java.util.HashMap();test.put(\"Jim\", a);test;"),
-                             HashMap.class.getCanonicalName(),
-                             Collections.emptyList()
-                     ));
-        assertEquals(Collections.emptyMap(),
-                     evaluator.evaluateLiteralExpression(
-                             mvelExpression("a = \"Person\";\n" +
-                                                    "test = new java.util.HashMap();\n" +
-                                                    "test.put(\"Jim\", a);\n" +
-                                                    "test;\n" +
-                                                    "test.clear();\n" +
-                                                    "test;"),
-                             HashMap.class.getCanonicalName(),
-                             Collections.emptyList()
-                     ));
+        assertThat(evaluateLiteralExpression("[\"Jim\" : \"Person\"]", HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";\n" +
+                "test = new java.util.HashMap();\n" +
+                "test.put(\"Jim\", a);\n" +
+                "test;",
+                HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";test = new java.util.HashMap();test.put(\"Jim\", a);test;", HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";\n" +
+                        "test = new java.util.HashMap();\n" +
+                        "test.put(\"Jim\", a);\n" +
+                        "test;\n" +
+                        "test.clear();\n" +
+                        "test;",
+                HashMap.class)).isEqualTo(Map.of());
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("1+", String.class.getCanonicalName(), Collections.emptyList()))
-                .isInstanceOf(RuntimeException.class);
+        assertThatThrownBy(() -> evaluateLiteralExpression("1+", String.class)).isInstanceOf(RuntimeException.class);
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression(mvelExpression("1"), String.class.getCanonicalName(),
-                                                                     Collections.emptyList()
-        ))
+        assertThatThrownBy(() -> evaluateLiteralExpression("1", String.class))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageStartingWith("Cannot assign a 'java.lang.Integer");
     }
@@ -172,15 +144,13 @@ public class MVELExpressionEvaluatorTest {
     @Ignore("https://issues.redhat.com/browse/DROOLS-4649")
     @Test
     public void evaluateLiteralExpression_Array() {
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("{\"Jim\", \"Michael\"}"), Object[].class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new String[]{"Jim", "Michael"});
+        assertThat(evaluateLiteralExpression("{\"Jim\", \"Michael\"}", Object[].class)).isEqualTo(new String[]{"Jim", "Michael"});
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("{ }"), Object[].class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new String[]{});
+        assertThat(evaluateLiteralExpression("{ }", Object[].class)).isEqualTo(new String[]{});
+    }
+    
+    private Object evaluateLiteralExpression(String rawExpression, Class klass) {
+    	return evaluator.evaluateLiteralExpression(mvelExpression(rawExpression), klass.getCanonicalName(), List.of());
     }
 
     @Test
@@ -192,12 +162,12 @@ public class MVELExpressionEvaluatorTest {
 
     @Test
     public void cleanExpression() {
-        assertEquals("test", evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + "test"));
-        assertEquals(" test", evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + " test"));
-        assertEquals(" " + MVEL_ESCAPE_SYMBOL + " test", evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + " " + MVEL_ESCAPE_SYMBOL + " test"));
-        assertEquals("test", evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + "test").toString()));
-        assertEquals(" test", evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + " test").toString()));
-        assertEquals(" " + MVEL_ESCAPE_SYMBOL + " test", evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + " " + MVEL_ESCAPE_SYMBOL + " test").toString()));
+        assertThat(evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + "test")).isEqualTo("test");
+        assertThat(evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + " test")).isEqualTo(" test");
+        assertThat(evaluator.cleanExpression(MVEL_ESCAPE_SYMBOL + " " + MVEL_ESCAPE_SYMBOL + " test")).isEqualTo(" " + MVEL_ESCAPE_SYMBOL + " test");
+        assertThat(evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + "test").toString())).isEqualTo("test");
+        assertThat(evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + " test").toString())).isEqualTo(" test");
+        assertThat(evaluator.cleanExpression(new TextNode(MVEL_ESCAPE_SYMBOL + " " + MVEL_ESCAPE_SYMBOL + " test").toString())).isEqualTo(" " + MVEL_ESCAPE_SYMBOL + " test");
 
         assertThatThrownBy(() -> evaluator.cleanExpression("test"))
                 .isInstanceOf(IllegalArgumentException.class)
