@@ -1,24 +1,24 @@
-/*
- * Copyright 2018 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.drools.scenariosimulation.backend.runner;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -42,6 +42,7 @@ import org.drools.scenariosimulation.api.model.ScenarioSimulationModel;
 import org.drools.scenariosimulation.api.model.ScenarioWithIndex;
 import org.drools.scenariosimulation.api.model.Settings;
 import org.drools.scenariosimulation.api.model.Simulation;
+import org.drools.scenariosimulation.api.utils.ConstantsHolder;
 import org.drools.scenariosimulation.backend.expression.BaseExpressionEvaluator;
 import org.drools.scenariosimulation.backend.expression.ExpressionEvaluator;
 import org.drools.scenariosimulation.backend.expression.ExpressionEvaluatorFactory;
@@ -51,33 +52,32 @@ import org.drools.scenariosimulation.backend.fluent.RuleScenarioExecutableBuilde
 import org.drools.scenariosimulation.backend.model.Dispute;
 import org.drools.scenariosimulation.backend.model.Person;
 import org.drools.scenariosimulation.backend.runner.model.InstanceGiven;
-import org.drools.scenariosimulation.backend.runner.model.ResultWrapper;
 import org.drools.scenariosimulation.backend.runner.model.ScenarioExpect;
 import org.drools.scenariosimulation.backend.runner.model.ScenarioResult;
 import org.drools.scenariosimulation.backend.runner.model.ScenarioResultMetadata;
 import org.drools.scenariosimulation.backend.runner.model.ScenarioRunnerData;
+import org.drools.scenariosimulation.backend.runner.model.ValueWrapper;
+import org.drools.scenariosimulation.backend.util.ScenarioSimulationServerMessages;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.kie.api.runtime.KieContainer;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
 import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.Assertions.within;
+import static org.drools.scenariosimulation.api.model.FactMappingValueStatus.FAILED_WITH_EXCEPTION;
+import static org.drools.scenariosimulation.api.model.FactMappingValueStatus.SUCCESS;
 import static org.drools.scenariosimulation.backend.TestUtils.commonCheckAuditLogLine;
 import static org.drools.scenariosimulation.backend.fluent.RuleScenarioExecutableBuilder.COVERAGE_LISTENER;
 import static org.drools.scenariosimulation.backend.fluent.RuleScenarioExecutableBuilder.RULES_AVAILABLE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.eq;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
@@ -190,64 +190,87 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
         backgroundData2 = background.addData();
         backgroundData2.addMappingValue(personFactIdentifier, firstNameGivenExpressionIdentifier, NAME);
     }
+    
+    @Test
+    public void extractGivenValues_scenario1() {
+        List<InstanceGiven> scenario1Inputs = extractGivenValuesForScenario1();
+        
+        assertThat(scenario1Inputs).hasSize(1);
+
+    }
 
     @Test
-    public void extractGivenValuesTest() {
-        List<InstanceGiven> scenario1Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario1.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
-        assertEquals(1, scenario1Inputs.size());
+    public void extractGivenValues_scenario2() {
+        List<InstanceGiven> scenario2Inputs = extractGivenValuesForScenario2();
+        
+        assertThat(scenario2Inputs).hasSize(2);
 
-        List<InstanceGiven> scenario2Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario2.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
-        assertEquals(2, scenario2Inputs.size());
-
+    }
+    
+    @Test
+    public void extractGivenValues_scenario2_addOrUpdateMappingValue() {
         // add expression
         scenario2.addOrUpdateMappingValue(disputeFactIdentifier, expressionGivenExpressionIdentifier, "# new org.drools.scenariosimulation.backend.model.Dispute(\"dispute description\", 10)");
 
-        scenario2Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                          scenario2.getUnmodifiableFactMappingValues(),
-                                                          classLoader,
-                                                          expressionEvaluatorFactory);
-        assertEquals(2, scenario2Inputs.size());
+        List<InstanceGiven> scenario2Inputs = extractGivenValuesForScenario2();
+        
+        assertThat(scenario2Inputs).hasSize(2);
         Optional<Dispute> disputeGivenOptional = scenario2Inputs.stream()
                 .filter(elem -> elem.getValue() instanceof Dispute)
                 .map(elem -> (Dispute) elem.getValue())
                 .findFirst();
-        assertTrue(disputeGivenOptional.isPresent());
-        assertEquals(disputeGivenOptional.get().getDescription(), "dispute description");
-
+        assertThat(disputeGivenOptional).isPresent();
+        assertThat(disputeGivenOptional.get().getDescription()).isEqualTo("dispute description");
+    }
+    
+    @Test
+    public void extractGivenValues_scenario2_addOrUpdateMappingValue_wrongValue() {
         scenario2.addOrUpdateMappingValue(disputeFactIdentifier, amountGivenExpressionIdentifier, "WrongValue");
-        assertThatThrownBy(() -> runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                 scenario2.getUnmodifiableFactMappingValues(),
-                                                                 classLoader,
-                                                                 expressionEvaluatorFactory))
+
+        assertThatThrownBy(() -> extractGivenValuesForScenario2())
                 .isInstanceOf(ScenarioException.class)
                 .hasMessage("Error in GIVEN data");
-    }
+    }    
+
 
     @Test
-    public void extractExpectedValuesTest() {
+    public void extractExpectedValues_scenario1() {
         List<ScenarioExpect> scenario1Outputs = runnerHelper.extractExpectedValues(scenario1.getUnmodifiableFactMappingValues());
-        assertEquals(1, scenario1Outputs.size());
 
+        assertThat(scenario1Outputs).hasSize(1);
+    }
+    
+    @Test
+    public void extractExpectedValues_scenario2_addOrUpdateMappingValue() {
         scenario2.addOrUpdateMappingValue(FactIdentifier.create("TEST", String.class.getCanonicalName()),
                                           ExpressionIdentifier.create("TEST", FactMappingType.EXPECT),
                                           "TEST");
+        
         List<ScenarioExpect> scenario2Outputs = runnerHelper.extractExpectedValues(scenario2.getUnmodifiableFactMappingValues());
-        assertEquals(3, scenario2Outputs.size());
-        assertEquals(1, scenario2Outputs.stream().filter(ScenarioExpect::isNewFact).count());
+    
+        assertThat(scenario2Outputs).hasSize(3);
+        assertThat(scenario2Outputs.stream().filter(ScenarioExpect::isNewFact).count()).isEqualTo(1);
+    }    
+    
+    @Test
+    public void extractExpectedValues_scenario2_addOrUpdateMappingValue_givenAndExpect() {
+        /* A Given "TEST" fact with null rawValue should works as the previous case, i.e. to not consider the GIVEN fact with empty data */
+        scenario2.addOrUpdateMappingValue(FactIdentifier.create("TEST", String.class.getCanonicalName()),
+                                          ExpressionIdentifier.create("TEST", FactMappingType.EXPECT),
+                                          "TEST");
+        scenario2.addOrUpdateMappingValue(FactIdentifier.create("TEST", String.class.getCanonicalName()),
+                                          ExpressionIdentifier.create("TEST", FactMappingType.GIVEN),
+                                          null);
+
+        List<ScenarioExpect> scenario2aOutputs = runnerHelper.extractExpectedValues(scenario2.getUnmodifiableFactMappingValues());
+        
+        assertThat(scenario2aOutputs).hasSize(3);
+        assertThat(scenario2aOutputs.stream().filter(ScenarioExpect::isNewFact).count()).isEqualTo(1);
     }
 
     @Test
-    public void verifyConditionsTest() {
-        List<InstanceGiven> scenario1Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario1.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
+    public void verifyConditions_scenario1() {
+        List<InstanceGiven> scenario1Inputs = extractGivenValuesForScenario1();
         List<ScenarioExpect> scenario1Outputs = runnerHelper.extractExpectedValues(scenario1.getUnmodifiableFactMappingValues());
 
         ScenarioRunnerData scenarioRunnerData1 = new ScenarioRunnerData();
@@ -258,12 +281,12 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
                                       scenarioRunnerData1,
                                       expressionEvaluatorFactory,
                                       null);
-        assertEquals(1, scenarioRunnerData1.getResults().size());
-
-        List<InstanceGiven> scenario2Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario2.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
+        assertThat(scenarioRunnerData1.getResults()).hasSize(1);
+    }
+    
+    @Test
+    public void verifyConditions_scenario2() {
+        List<InstanceGiven> scenario2Inputs = extractGivenValuesForScenario2();
         List<ScenarioExpect> scenario2Outputs = runnerHelper.extractExpectedValues(scenario2.getUnmodifiableFactMappingValues());
 
         ScenarioRunnerData scenarioRunnerData2 = new ScenarioRunnerData();
@@ -274,96 +297,131 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
                                       scenarioRunnerData2,
                                       expressionEvaluatorFactory,
                                       null);
-        assertEquals(2, scenarioRunnerData2.getResults().size());
+
+        assertThat(scenarioRunnerData2.getResults()).hasSize(2);
     }
 
     @Test
     public void getScenarioResultsTest() {
-        List<InstanceGiven> scenario1Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario1.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
+        List<InstanceGiven> scenario1Inputs = extractGivenValuesForScenario1();
         List<ScenarioExpect> scenario1Outputs = runnerHelper.extractExpectedValues(scenario1.getUnmodifiableFactMappingValues());
 
-        assertTrue(scenario1Inputs.size() > 0);
+        assertThat(scenario1Inputs).isNotEmpty();
 
         InstanceGiven input1 = scenario1Inputs.get(0);
 
         scenario1Outputs = scenario1Outputs.stream().filter(elem -> elem.getFactIdentifier().equals(input1.getFactIdentifier())).collect(toList());
         List<ScenarioResult> scenario1Results = runnerHelper.getScenarioResultsFromGivenFacts(simulation.getScesimModelDescriptor(), scenario1Outputs, input1, expressionEvaluatorFactory);
 
-        assertEquals(1, scenario1Results.size());
-        assertEquals(FactMappingValueStatus.SUCCESS, scenario1Outputs.get(0).getExpectedResult().get(0).getStatus());
+        assertThat(scenario1Results).hasSize(1);
+        assertThat(scenario1Outputs.get(0).getExpectedResult().get(0).getStatus()).isEqualTo(SUCCESS);
 
-        List<InstanceGiven> scenario2Inputs = runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
-                                                                              scenario2.getUnmodifiableFactMappingValues(),
-                                                                              classLoader,
-                                                                              expressionEvaluatorFactory);
+        List<InstanceGiven> scenario2Inputs = extractGivenValuesForScenario2();
         List<ScenarioExpect> scenario2Outputs = runnerHelper.extractExpectedValues(scenario2.getUnmodifiableFactMappingValues());
 
-        assertTrue(scenario2Inputs.size() > 0);
+        assertThat(scenario2Inputs).isNotEmpty();
 
         InstanceGiven input2 = scenario2Inputs.get(0);
 
         scenario2Outputs = scenario2Outputs.stream().filter(elem -> elem.getFactIdentifier().equals(input2.getFactIdentifier())).collect(toList());
         List<ScenarioResult> scenario2Results = runnerHelper.getScenarioResultsFromGivenFacts(simulation.getScesimModelDescriptor(), scenario2Outputs, input2, expressionEvaluatorFactory);
 
-        assertEquals(1, scenario2Results.size());
-        assertEquals(FactMappingValueStatus.SUCCESS, scenario1Outputs.get(0).getExpectedResult().get(0).getStatus());
+        assertThat(scenario2Results).hasSize(1);
+        assertThat(scenario1Outputs.get(0).getExpectedResult().get(0).getStatus()).isEqualTo(SUCCESS);
 
-        List<ScenarioExpect> newFact = singletonList(new ScenarioExpect(personFactIdentifier, emptyList(), true));
+        List<ScenarioExpect> newFact = List.of(new ScenarioExpect(personFactIdentifier, List.of(), true));
         List<ScenarioResult> scenario2NoResults = runnerHelper.getScenarioResultsFromGivenFacts(simulation.getScesimModelDescriptor(), newFact, input2, expressionEvaluatorFactory);
 
-        assertEquals(0, scenario2NoResults.size());
+        assertThat(scenario2NoResults).hasSize(0);
 
         Person person = new Person();
         person.setFirstName("ANOTHER STRING");
         InstanceGiven newInput = new InstanceGiven(personFactIdentifier, person);
 
         List<ScenarioResult> scenario3Results = runnerHelper.getScenarioResultsFromGivenFacts(simulation.getScesimModelDescriptor(), scenario1Outputs, newInput, expressionEvaluatorFactory);
-        assertEquals(FactMappingValueStatus.FAILED_WITH_ERROR, scenario1Outputs.get(0).getExpectedResult().get(0).getStatus());
+        assertThat(scenario1Outputs.get(0).getExpectedResult().get(0).getStatus()).isEqualTo(FactMappingValueStatus.FAILED_WITH_ERROR);
 
-        assertEquals(1, scenario3Results.size());
-        assertEquals(person.getFirstName(), scenario3Results.get(0).getResultValue().get());
-        assertEquals("NAME", scenario3Results.get(0).getFactMappingValue().getRawValue());
+        assertThat(scenario3Results).hasSize(1);
+        assertThat(scenario3Results.get(0).getResultValue().get()).isEqualTo(person.getFirstName());
+        assertThat(scenario3Results.get(0).getFactMappingValue().getRawValue()).isEqualTo("NAME");
     }
-
+ 
     @Test
     public void validateAssertionTest() {
-
         List<ScenarioResult> scenarioFailResult = new ArrayList<>();
         scenarioFailResult.add(new ScenarioResult(amountNameExpectedFactMappingValue, "SOMETHING_ELSE"));
         try {
-            runnerHelper.validateAssertion(scenarioFailResult, scenario2);
-            fail();
-        } catch (ScenarioException ignored) {
+            runnerHelper.validateAssertion(scenarioFailResult, simulation.getScesimModelDescriptor());
+            fail("Unexpected execution path");
+        } catch (IllegalStateException exception) {
+            assertThat(exception.getMessage()).isEqualTo("Illegal FactMappingValue status");
+        }
+
+        amountNameExpectedFactMappingValue.resetStatus();
+        amountNameExpectedFactMappingValue.setErrorValue("Error");
+        scenarioFailResult.add(new ScenarioResult(amountNameExpectedFactMappingValue, "SOMETHING_ELSE"));
+        try {
+            runnerHelper.validateAssertion(scenarioFailResult, simulation.getScesimModelDescriptor());
+            fail("Unexpected execution path");
+        } catch (ScenarioException exception) {
+            assertThat(exception.isFailedAssertion()).isTrue();
+            assertThat(exception.getMessage()).isEqualTo(ScenarioSimulationServerMessages.getFactWithWrongValueExceptionMessage("Fact 2.amount",
+                    amountNameExpectedFactMappingValue.getRawValue(),
+                    amountNameExpectedFactMappingValue.getErrorValue()));
+        }
+
+        String exceptionMessage = "Message";
+        amountNameExpectedFactMappingValue.resetStatus();
+        amountNameExpectedFactMappingValue.setExceptionMessage(exceptionMessage);
+        scenarioFailResult.add(new ScenarioResult(amountNameExpectedFactMappingValue, "SOMETHING_ELSE"));
+        try {
+            runnerHelper.validateAssertion(scenarioFailResult, simulation.getScesimModelDescriptor());
+            fail("Unexpected execution path");
+        } catch (ScenarioException exception) {
+            assertThat(exception.isFailedAssertion()).isFalse();
+            assertThat(exception.getMessage()).isEqualTo(ScenarioSimulationServerMessages.getGenericScenarioExceptionMessage(exceptionMessage));
+        }
+
+        List<String> pathToValue = List.of("Item #2");
+        amountNameExpectedFactMappingValue.resetStatus();
+        amountNameExpectedFactMappingValue.setCollectionPathToValue(pathToValue);
+        scenarioFailResult.add(new ScenarioResult(amountNameExpectedFactMappingValue, "SOMETHING_ELSE"));
+        try {
+            runnerHelper.validateAssertion(scenarioFailResult, simulation.getScesimModelDescriptor());
+            fail("Unexpected execution path");
+        } catch (ScenarioException exception) {
+            assertThat(exception.isFailedAssertion()).isTrue();
+            assertThat(exception.getMessage()).isEqualTo(ScenarioSimulationServerMessages.getCollectionFactExceptionMessage("Fact 2.amount",
+                    pathToValue,
+                    amountNameExpectedFactMappingValue.getErrorValue()));
         }
 
         List<ScenarioResult> scenarioSuccessResult = new ArrayList<>();
         scenarioSuccessResult.add(new ScenarioResult(amountNameExpectedFactMappingValue, amountNameExpectedFactMappingValue.getRawValue()).setResult(true));
-        runnerHelper.validateAssertion(scenarioSuccessResult, scenario2);
+        runnerHelper.validateAssertion(scenarioSuccessResult, simulation.getScesimModelDescriptor());
     }
 
     @Test
     public void groupByFactIdentifierAndFilterTest() {
         Map<FactIdentifier, List<FactMappingValue>> scenario1Given = runnerHelper.groupByFactIdentifierAndFilter(scenario1.getUnmodifiableFactMappingValues(), FactMappingType.GIVEN);
+        assertThat(scenario1Given).hasSize(1);
+        assertThat(scenario1Given.get(personFactIdentifier)).hasSize(1);
+
         Map<FactIdentifier, List<FactMappingValue>> scenario1Expected = runnerHelper.groupByFactIdentifierAndFilter(scenario1.getUnmodifiableFactMappingValues(), FactMappingType.EXPECT);
+        assertThat(scenario1Expected).hasSize(1);
+        assertThat(scenario1Expected.get(personFactIdentifier)).hasSize(1);
+
         Map<FactIdentifier, List<FactMappingValue>> scenario2Given = runnerHelper.groupByFactIdentifierAndFilter(scenario2.getUnmodifiableFactMappingValues(), FactMappingType.GIVEN);
+        assertThat(scenario2Given).hasSize(2);
+        assertThat(scenario2Given.get(disputeFactIdentifier)).hasSize(1);
+        
         Map<FactIdentifier, List<FactMappingValue>> scenario2Expected = runnerHelper.groupByFactIdentifierAndFilter(scenario2.getUnmodifiableFactMappingValues(), FactMappingType.EXPECT);
-
-        assertEquals(1, scenario1Given.keySet().size());
-        assertEquals(1, scenario1Expected.keySet().size());
-        assertEquals(2, scenario2Given.keySet().size());
-        assertEquals(2, scenario2Expected.keySet().size());
-
-        assertEquals(1, scenario1Given.get(personFactIdentifier).size());
-        assertEquals(1, scenario1Expected.get(personFactIdentifier).size());
-        assertEquals(1, scenario2Given.get(disputeFactIdentifier).size());
-        assertEquals(1, scenario2Expected.get(disputeFactIdentifier).size());
+        assertThat(scenario2Expected).hasSize(2);
+        assertThat(scenario2Expected.get(disputeFactIdentifier)).hasSize(1);
 
         Scenario scenario = new Scenario();
         scenario.addMappingValue(FactIdentifier.EMPTY, ExpressionIdentifier.DESCRIPTION, null);
-        assertEquals(0, runnerHelper.groupByFactIdentifierAndFilter(scenario.getUnmodifiableFactMappingValues(), FactMappingType.GIVEN).size());
+        assertThat(runnerHelper.groupByFactIdentifierAndFilter(scenario.getUnmodifiableFactMappingValues(), FactMappingType.GIVEN)).hasSize(0);
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -376,31 +434,30 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
     }
 
     @Test
-    public void createExtractorFunctionTest() {
+    public void createExtractorFunction() {
         String personName = "Test";
         FactMappingValue factMappingValue = new FactMappingValue(personFactIdentifier, firstNameGivenExpressionIdentifier, personName);
-        Function<Object, ResultWrapper> extractorFunction = runnerHelper.createExtractorFunction(expressionEvaluator, factMappingValue, simulation.getScesimModelDescriptor());
+        Function<Object, ValueWrapper> extractorFunction = runnerHelper.createExtractorFunction(expressionEvaluator, factMappingValue, simulation.getScesimModelDescriptor());
         Person person = new Person();
 
         person.setFirstName(personName);
-        assertTrue(extractorFunction.apply(person).isSatisfied());
+        assertThat(extractorFunction.apply(person).isValid()).isTrue();
 
         person.setFirstName("OtherString");
-        assertFalse(extractorFunction.apply(person).isSatisfied());
+        assertThat(extractorFunction.apply(person).isValid()).isFalse();
 
-        Function<Object, ResultWrapper> extractorFunction1 = runnerHelper.createExtractorFunction(expressionEvaluator,
+        Function<Object, ValueWrapper> extractorFunction1 = runnerHelper.createExtractorFunction(expressionEvaluator,
                                                                                                   new FactMappingValue(personFactIdentifier,
                                                                                                                        firstNameGivenExpressionIdentifier,
                                                                                                                        null),
                                                                                                   simulation.getScesimModelDescriptor());
-        ResultWrapper nullValue = extractorFunction1.apply(new Person());
-        assertTrue(nullValue.isSatisfied());
-        assertNull(nullValue.getResult());
+        ValueWrapper nullValue = extractorFunction1.apply(new Person());
+        assertThat(nullValue.isValid()).isTrue();
+        assertThat(nullValue.getValue()).isNull();
     }
 
-    @SuppressWarnings("ResultOfMethodCallIgnored")
     @Test
-    public void getParamsForBeanTest() {
+    public void getParamsForBean() {
         List<FactMappingValue> factMappingValues = new ArrayList<>();
         FactMappingValue factMappingValue1 = spy(new FactMappingValue(disputeFactIdentifier, amountGivenExpressionIdentifier, "NOT PARSABLE"));
         FactMappingValue factMappingValue2 = spy(new FactMappingValue(disputeFactIdentifier, amountGivenExpressionIdentifier, "NOT PARSABLE"));
@@ -414,94 +471,78 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
                 .hasMessage("Error in one or more input values");
 
         factMappingValues.forEach(fmv -> verify(fmv, times(2)).getRawValue());
-
-        assertEquals(FactMappingValueStatus.FAILED_WITH_EXCEPTION, factMappingValue1.getStatus());
-        assertEquals(FactMappingValueStatus.FAILED_WITH_EXCEPTION, factMappingValue2.getStatus());
-        assertEquals(FactMappingValueStatus.SUCCESS, factMappingValue3.getStatus());
+        
+        assertThat(factMappingValues).extracting(x -> x.getStatus()).containsExactly(FAILED_WITH_EXCEPTION, FAILED_WITH_EXCEPTION, SUCCESS);
     }
 
     @Test
-    public void directMappingTest() {
+    public void getDirectMapping() {
+        assertThat(runnerHelper.getDirectMapping(Map.of(List.of(), 1)).getValue()).isEqualTo(1);
+
         Map<List<String>, Object> paramsToSet = new HashMap<>();
-        paramsToSet.put(emptyList(), "Test");
+        paramsToSet.put(List.of(), null);
 
-        assertEquals("Test", runnerHelper.getDirectMapping(paramsToSet).getResult());
+        assertThat(runnerHelper.getDirectMapping(paramsToSet).getValue()).isNull();
 
-        paramsToSet.clear();
-        paramsToSet.put(emptyList(), 1);
-
-        assertEquals(1, runnerHelper.getDirectMapping(paramsToSet).getResult());
-
-        paramsToSet.clear();
-        paramsToSet.put(emptyList(), null);
-
-        assertNull(runnerHelper.getDirectMapping(paramsToSet).getResult());
-
-        paramsToSet.clear();
-
-        ResultWrapper<Object> directMapping = runnerHelper.getDirectMapping(paramsToSet);
-        assertFalse(directMapping.isSatisfied());
-        assertEquals("No direct mapping available", directMapping.getErrorMessage().get());
+        ValueWrapper<Object> directMapping = runnerHelper.getDirectMapping(Map.of());
+        assertThat(directMapping.isValid()).isFalse();
+        assertThat(directMapping.getErrorMessage().get()).isEqualTo("No direct mapping available");
     }
 
     @Test
     public void createObject() {
         Map<List<String>, Object> params = new HashMap<>();
-        params.put(singletonList("firstName"), "TestName");
-        params.put(singletonList("age"), 10);
+        params.put(List.of("firstName"), "TestName");
+        params.put(List.of("age"), 10);
 
-        Optional<Object> initialInstance = runnerHelper.getDirectMapping(params).getOptional();
-        Object objectRaw = runnerHelper.createObject(
-                initialInstance,
-                Person.class.getCanonicalName(),
-                params,
-                this.getClass().getClassLoader());
-        assertTrue(objectRaw instanceof Person);
+        ValueWrapper<Object> initialInstance = runnerHelper.getDirectMapping(params);
+        Object objectRaw = runnerHelper.createObject(initialInstance, Person.class.getCanonicalName(), params, getClass().getClassLoader());
+        assertThat(objectRaw).isInstanceOf(Person.class);
 
         Person object = (Person) objectRaw;
-        assertEquals(10, object.getAge());
-        assertEquals("TestName", object.getFirstName());
+        assertThat(object.getAge()).isEqualTo(10);
+        assertThat(object.getFirstName()).isEqualTo("TestName");
     }
 
     @Test
     public void createObjectDirectMappingSimpleType() {
         Map<List<String>, Object> params = new HashMap<>();
         String directMappingSimpleTypeValue = "TestName";
-        params.put(Collections.emptyList(), directMappingSimpleTypeValue);
+        params.put(List.of(), directMappingSimpleTypeValue);
 
-        Optional<Object> initialInstance = runnerHelper.getDirectMapping(params).getOptional();
-        Object objectRaw = runnerHelper.createObject(
-                initialInstance,
-                String.class.getCanonicalName(),
-                params,
-                this.getClass().getClassLoader());
+        ValueWrapper<Object> initialInstance = runnerHelper.getDirectMapping(params);
+        Object objectRaw = runnerHelper.createObject(initialInstance, String.class.getCanonicalName(), params, getClass().getClassLoader());
 
-        assertTrue(objectRaw instanceof String);
-
-        assertEquals(directMappingSimpleTypeValue, objectRaw);
+        assertThat(objectRaw).isInstanceOf(String.class).isEqualTo(directMappingSimpleTypeValue);
     }
 
-    @SuppressWarnings("unchecked")
+    @Test
+    public void createObjectDirectMappingSimpleTypeNull() {
+        Map<List<String>, Object> params = new HashMap<>();
+        params.put(List.of(), null);
+
+        ValueWrapper<Object> initialInstance = runnerHelper.getDirectMapping(params);
+        Object objectRaw = runnerHelper.createObject( initialInstance, String.class.getCanonicalName(), params, getClass().getClassLoader());
+
+        assertThat(objectRaw).isNull();
+    }
+    
     @Test
     public void createObjectDirectMappingComplexType() {
         Map<List<String>, Object> params = new HashMap<>();
         Person directMappingComplexTypeValue = new Person();
         directMappingComplexTypeValue.setFirstName("TestName");
-        params.put(emptyList(), directMappingComplexTypeValue);
-        params.put(singletonList("age"), 10);
+        params.put(List.of(), directMappingComplexTypeValue);
+        params.put(List.of("age"), 10);
 
-        Optional<Object> initialInstance = runnerHelper.getDirectMapping(params).getOptional();
-        Object objectRaw = runnerHelper.createObject(
-                initialInstance,
-                Map.class.getCanonicalName(),
-                params,
-                this.getClass().getClassLoader());
+        ValueWrapper<Object> initialInstance = runnerHelper.getDirectMapping(params);
+        Object objectRaw = runnerHelper.createObject( initialInstance, Map.class.getCanonicalName(), params, getClass().getClassLoader());
 
-        assertTrue(objectRaw instanceof Person);
+        assertThat(objectRaw).isInstanceOf(Person.class);
 
         Person object = (Person) objectRaw;
-        assertEquals(10, object.getAge());
-        assertEquals("TestName", object.getFirstName());
+        assertThat(object.getAge()).isEqualTo(10);
+        assertThat(object.getFirstName()).isEqualTo("TestName");
     }
 
     @Test
@@ -522,18 +563,17 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
 
         ScenarioResultMetadata scenarioResultMetadata = runnerHelper.extractResultMetadata(requestContext, scenarioWithIndexMock);
 
-        assertEquals(scenarioWithIndexMock, scenarioResultMetadata.getScenarioWithIndex());
-        assertEquals(2, scenarioResultMetadata.getAvailable().size());
-        assertEquals(2, scenarioResultMetadata.getExecuted().size());
-        assertEquals((Integer) 2, scenarioResultMetadata.getExecutedWithCounter().get("rule1"));
-        assertEquals((Integer) 2, scenarioResultMetadata.getExecutedWithCounter().get("rule2"));
+        assertThat(scenarioResultMetadata.getScenarioWithIndex()).isEqualTo(scenarioWithIndexMock);
+        assertThat(scenarioResultMetadata.getAvailable()).hasSize(2);
+        assertThat(scenarioResultMetadata.getExecuted()).hasSize(2);
+        assertThat(scenarioResultMetadata.getExecutedWithCounter()).containsEntry("rule1", 2).containsEntry("rule2", 2);
         List<String> expectedMessages = new ArrayList<>();
-        commonAddMessageString(Arrays.asList("rule1", "rule2"), expectedMessages);
+        commonAddMessageString(List.of("rule1", "rule2"), expectedMessages);
 
         final List<AuditLogLine> auditLogLines = scenarioResultMetadata.getAuditLogLines();
-        assertEquals(expectedMessages.size(), auditLogLines.size());
+        assertThat(auditLogLines).hasSameSizeAs(expectedMessages);
         for (int i = 0; i < expectedMessages.size(); i++) {
-            commonCheckAuditLogLine(auditLogLines.get(i), expectedMessages.get(i), "INFO");
+            commonCheckAuditLogLine(auditLogLines.get(i), expectedMessages.get(i), ConstantsHolder.EXECUTED);
         }
     }
 
@@ -544,31 +584,31 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
         List<InstanceGiven> emptyBackgroundGivens = runnerHelper.extractBackgroundValues(emptyBackground,
                                                                                          classLoader,
                                                                                          expressionEvaluatorFactory);
-        assertEquals(0, emptyBackgroundGivens.size());
+        assertThat(emptyBackgroundGivens).hasSize(0);
 
         emptyBackground.addData();
         emptyBackgroundGivens = runnerHelper.extractBackgroundValues(emptyBackground,
                                                                      classLoader,
                                                                      expressionEvaluatorFactory);
-        assertEquals(0, emptyBackgroundGivens.size());
+        assertThat(emptyBackgroundGivens).hasSize(0);
 
         // TEST 1 - background correct
         List<InstanceGiven> backgroundGivens = runnerHelper.extractBackgroundValues(this.background,
                                                                                     classLoader,
                                                                                     expressionEvaluatorFactory);
-        assertEquals(3, backgroundGivens.size());
+        assertThat(backgroundGivens).hasSize(3);
         for (InstanceGiven backgroundGiven : backgroundGivens) {
             if (backgroundGiven.getFactIdentifier().equals(personFactIdentifier)) {
-                assertEquals(personFactIdentifier, backgroundGiven.getFactIdentifier());
+                assertThat(backgroundGiven.getFactIdentifier()).isEqualTo(personFactIdentifier);
                 Person person = (Person) backgroundGiven.getValue();
-                assertEquals(NAME, person.getFirstName());
+                assertThat(person.getFirstName()).isEqualTo(NAME);
             } else if (backgroundGiven.getFactIdentifier().equals(disputeFactIdentifier)) {
-                assertEquals(disputeFactIdentifier, backgroundGiven.getFactIdentifier());
+                assertThat(backgroundGiven.getFactIdentifier()).isEqualTo(disputeFactIdentifier);
                 Dispute dispute = (Dispute) backgroundGiven.getValue();
                 double parsedAmount = Double.parseDouble(AMOUNT);
-                assertEquals(parsedAmount, dispute.getAmount(), 0.1);
+                assertThat(dispute.getAmount()).isCloseTo(parsedAmount, within(0.1));
             } else {
-                fail();
+                fail("Unexpected execution path");
             }
         }
 
@@ -583,10 +623,10 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
                 .isInstanceOf(ScenarioException.class)
                 .hasMessage("Error in BACKGROUND data");
 
-        assertEquals(FactMappingValueStatus.FAILED_WITH_EXCEPTION, notValid1.getStatus());
-        assertTrue(notValid1.getExceptionMessage().startsWith("Impossible to parse"));
-        assertEquals(FactMappingValueStatus.FAILED_WITH_EXCEPTION, notValid2.getStatus());
-        assertTrue(notValid2.getExceptionMessage().startsWith("Impossible to parse"));
+        assertThat(notValid1.getStatus()).isEqualTo(FAILED_WITH_EXCEPTION);
+        assertThat(notValid1.getExceptionMessage()).startsWith("Impossible to parse");
+        assertThat(notValid2.getStatus()).isEqualTo(FAILED_WITH_EXCEPTION);
+        assertThat(notValid2.getExceptionMessage()).startsWith("Impossible to parse");
     }
 
     @Test
@@ -598,8 +638,8 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
         scenarioRunnerData.addBackground(new InstanceGiven(disputeFactIdentifier, new Dispute()));
         scenarioRunnerData.addGiven(new InstanceGiven(personFactIdentifier, new Person()));
         FactMappingValue factMappingValue = new FactMappingValue(personFactIdentifier, firstNameExpectedExpressionIdentifier, NAME);
-        scenarioRunnerData.addExpect(new ScenarioExpect(personFactIdentifier, singletonList(factMappingValue), false));
-        scenarioRunnerData.addExpect(new ScenarioExpect(personFactIdentifier, singletonList(factMappingValue), true));
+        scenarioRunnerData.addExpect(new ScenarioExpect(personFactIdentifier, List.of(factMappingValue), false));
+        scenarioRunnerData.addExpect(new ScenarioExpect(personFactIdentifier, List.of(factMappingValue), true));
 
         int inputObjects = scenarioRunnerData.getBackgrounds().size() + scenarioRunnerData.getGivens().size();
 
@@ -608,17 +648,17 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
 
         runnerHelper.executeScenario(kieContainerMock, scenarioRunnerData, expressionEvaluatorFactory, simulation.getScesimModelDescriptor(), settings);
 
-        verify(ruleScenarioExecutableBuilderMock, times(1)).setActiveRuleFlowGroup(eq(ruleFlowGroup));
+        verify(ruleScenarioExecutableBuilderMock, times(1)).setActiveRuleFlowGroup(ruleFlowGroup);
 
         verify(ruleScenarioExecutableBuilderMock, times(inputObjects)).insert(insertCaptor.capture());
         for (Object value : insertCaptor.getAllValues()) {
-            assertTrue(value instanceof Person || value instanceof Dispute);
+            assertThat(value instanceof Person || value instanceof Dispute).isTrue();
         }
 
         verify(ruleScenarioExecutableBuilderMock, times(1)).addInternalCondition(eq(Person.class), any(), any());
         verify(ruleScenarioExecutableBuilderMock, times(1)).run();
 
-        assertEquals(1, scenarioRunnerData.getResults().size());
+        assertThat(scenarioRunnerData.getResults()).hasSize(1);
 
         // test not rule error
         settings.setType(ScenarioSimulationModel.Type.DMN);
@@ -628,7 +668,22 @@ public class RuleScenarioRunnerHelperTest extends AbstractRuleCoverageTest {
     }
 
     private void commonAddMessageString(List<String> ruleNames, List<String> expectedMessages) {
-        ruleNames.forEach(ruleName ->
-                                  IntStream.range(1, 3).forEach(index -> expectedMessages.add(CoverageAgendaListener.generateAuditMessage(ruleName))));
+        ruleNames.forEach(ruleName -> IntStream.range(1, 3).forEach(index -> expectedMessages.add(ruleName)));
     }
+    
+
+	private List<InstanceGiven> extractGivenValuesForScenario1() {
+		return runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
+                                                                              scenario1.getUnmodifiableFactMappingValues(),
+                                                                              classLoader,
+                                                                              expressionEvaluatorFactory);
+	}
+
+	private List<InstanceGiven> extractGivenValuesForScenario2() {
+		return runnerHelper.extractGivenValues(simulation.getScesimModelDescriptor(),
+                                                                 scenario2.getUnmodifiableFactMappingValues(),
+                                                                 classLoader,
+                                                                 expressionEvaluatorFactory);
+	}
+    
 }
