@@ -1,21 +1,23 @@
-/*
- * Copyright 2019 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.drools.scenariosimulation.backend.util;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -29,9 +31,7 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
-import static com.github.javaparser.utils.Utils.assertNotNull;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class DOMParserUtilTest {
 
@@ -72,30 +72,31 @@ public class DOMParserUtilTest {
     @Test
     public void cleanupNodesString() throws Exception {
         String retrieved = DOMParserUtil.cleanupNodes(XML, CHILD_NODE, TEST_NODE);
-        assertNotNull(retrieved);
+        assertThat(retrieved).isNotNull();
         Map<Node, List<Node>> childrenNodes = DOMParserUtil.getChildrenNodesMap(retrieved, MAIN_NODE, TEST_NODE);
-        assertNotNull(childrenNodes);
-        assertEquals(1, childrenNodes.size());
+        assertThat(childrenNodes).isNotNull();
+        assertThat(childrenNodes).hasSize(1);
         Node keyNode = childrenNodes.keySet().iterator().next();
-        assertEquals(MAIN_NODE, keyNode.getNodeName());
+        assertThat(keyNode.getNodeName()).isEqualTo(MAIN_NODE);
         List<Node> valueNodes = childrenNodes.get(keyNode);
-        assertTrue(valueNodes != null && valueNodes.size() == 1);
-        assertEquals(TEST_NODE, valueNodes.get(0).getNodeName());
+        assertThat(valueNodes).isNotNull().hasSize(1);
+        assertThat(valueNodes.get(0).getNodeName()).isEqualTo(TEST_NODE);
 
         childrenNodes = DOMParserUtil.getChildrenNodesMap(retrieved, CHILD_NODE, OTHER_NODE);
-        assertEquals(2, childrenNodes.size());
+        assertThat(childrenNodes).hasSize(2);
+        
         childrenNodes.forEach((childKeyNode, childValueNodes) -> {
-            assertNotNull(childKeyNode);
-            assertEquals(CHILD_NODE, childKeyNode.getNodeName());
-            assertTrue(childValueNodes != null && childValueNodes.size() == 1);
-            assertEquals(OTHER_NODE, childValueNodes.get(0).getNodeName());
+            assertThat(childKeyNode).isNotNull();
+            assertThat(childKeyNode.getNodeName()).isEqualTo(CHILD_NODE);
+            assertThat(childValueNodes).isNotNull().hasSize(1);
+            assertThat(childValueNodes.get(0).getNodeName()).isEqualTo(OTHER_NODE);
         });
 
         childrenNodes = DOMParserUtil.getChildrenNodesMap(retrieved, CHILD_NODE, TEST_NODE);
         childrenNodes.forEach((childKeyNode, childValueNodes) -> {
-            assertNotNull(childKeyNode);
-            assertEquals(CHILD_NODE, childKeyNode.getNodeName());
-            assertTrue(childValueNodes != null && childValueNodes.isEmpty());
+            assertThat(childKeyNode).isNotNull();
+            assertThat(childKeyNode.getNodeName()).isEqualTo(CHILD_NODE);
+            assertThat(childValueNodes).isNotNull().isEmpty();
         });
     }
 
@@ -103,30 +104,30 @@ public class DOMParserUtilTest {
     public void cleanupNodesDocument() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         DOMParserUtil.cleanupNodes(document, CHILD_NODE, TEST_NODE);
-        assertNotNull(document);
+        assertThat(document).isNotNull();
         Map<Node, List<Node>> childrenNodes = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, TEST_NODE);
-        assertNotNull(childrenNodes);
-        assertEquals(1, childrenNodes.size());
+        assertThat(childrenNodes).isNotNull();
+        assertThat(childrenNodes).hasSize(1);
         Node keyNode = childrenNodes.keySet().iterator().next();
-        assertEquals(MAIN_NODE, keyNode.getNodeName());
+        assertThat(keyNode.getNodeName()).isEqualTo(MAIN_NODE);
         List<Node> valueNodes = childrenNodes.get(keyNode);
-        assertTrue(valueNodes != null && valueNodes.size() == 1);
-        assertEquals(TEST_NODE, valueNodes.get(0).getNodeName());
+        assertThat(valueNodes).isNotNull().hasSize(1);
+        assertThat(valueNodes.get(0).getNodeName()).isEqualTo(TEST_NODE);
 
         childrenNodes = DOMParserUtil.getChildrenNodesMap(document, CHILD_NODE, OTHER_NODE);
-        assertEquals(2, childrenNodes.size());
+        assertThat(childrenNodes).hasSize(2);
         childrenNodes.forEach((childKeyNode, childValueNodes) -> {
-            assertNotNull(childKeyNode);
-            assertEquals(CHILD_NODE, childKeyNode.getNodeName());
-            assertTrue(childValueNodes != null && childValueNodes.size() == 1);
-            assertEquals(OTHER_NODE, childValueNodes.get(0).getNodeName());
+            assertThat(childKeyNode).isNotNull();
+            assertThat(childKeyNode.getNodeName()).isEqualTo(CHILD_NODE);
+            assertThat(childValueNodes).isNotNull().hasSize(1);
+            assertThat(childValueNodes.get(0).getNodeName()).isEqualTo(OTHER_NODE);
         });
 
         childrenNodes = DOMParserUtil.getChildrenNodesMap(document, CHILD_NODE, TEST_NODE);
         childrenNodes.forEach((childKeyNode, childValueNodes) -> {
-            assertNotNull(childKeyNode);
-            assertEquals(CHILD_NODE, childKeyNode.getNodeName());
-            assertTrue(childValueNodes != null && childValueNodes.isEmpty());
+            assertThat(childKeyNode).isNotNull();
+            assertThat(childKeyNode.getNodeName()).isEqualTo(CHILD_NODE);
+            assertThat(childValueNodes).isNotNull().isEmpty();
         });
     }
 
@@ -136,58 +137,68 @@ public class DOMParserUtilTest {
         Document document = DOMParserUtil.getDocument(XML);
         DOMParserUtil.replaceNodeText(document, MAIN_NODE, TEST_NODE, TEST_NODE_CONTENT, replacement);
         final Map<Node, List<Node>> retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, TEST_NODE);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
         List<Node> testNodes = retrieved.values().iterator().next();
-        assertNotNull(testNodes);
-        assertEquals(1, testNodes.size());
-        assertEquals(replacement, testNodes.get(0).getTextContent());
+        assertThat(testNodes).isNotNull();
+        assertThat(testNodes).hasSize(1);
+        assertThat(testNodes.get(0).getTextContent()).isEqualTo(replacement);
     }
 
     @Test
     public void replaceNodeName() throws Exception {
         final String replacement = "replacement";
         Document document = DOMParserUtil.getDocument(XML);
+        
         DOMParserUtil.replaceNodeName(document, MAIN_NODE, TEST_NODE, replacement);
+        
         final Map<Node, List<Node>> retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, replacement);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        
         List<Node> testNodes = retrieved.values().iterator().next();
-        assertNotNull(testNodes);
-        assertEquals(1, testNodes.size());
-        assertEquals("replacement", testNodes.get(0).getNodeName());
+        assertThat(testNodes).isNotNull();
+        assertThat(testNodes).hasSize(1);
+        assertThat(testNodes.get(0).getNodeName()).isEqualTo("replacement");
     }
 
     @Test
     public void getAttributeValuesByNode() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
+
         Map<Node, String> retrieved = DOMParserUtil.getAttributeValues(document, MAIN_NODE, MAIN_ATTRIBUTE_NAME);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
-        assertEquals(retrieved.values().toArray()[0], ATTRIBUTE_VALUE);
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        assertThat(retrieved.values().toArray()[0]).isEqualTo(ATTRIBUTE_VALUE);
+        
         retrieved = DOMParserUtil.getAttributeValues(document, MAIN_NODE, NOT_EXISTING);
-        assertNotNull(retrieved);
-        assertTrue(retrieved.isEmpty());
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).isEmpty();
+        
         retrieved = DOMParserUtil.getAttributeValues(document, CHILD_NODE, CHILD_ATTRIBUTE_NAME);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
-        retrieved.values().forEach(attributeValue -> assertEquals(ATTRIBUTE_VALUE, attributeValue));
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(2);
+        retrieved.values().forEach(attributeValue -> assertThat(attributeValue).isEqualTo(ATTRIBUTE_VALUE));
+        
         retrieved = DOMParserUtil.getAttributeValues(document, CHILD_NODE, NOT_EXISTING);
-        assertNotNull(retrieved);
-        assertTrue(retrieved.isEmpty());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).isEmpty();
     }
 
     @Test
     public void getAllAttributeValues() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, String> retrieved = DOMParserUtil.getAttributeValues(document, MAIN_ATTRIBUTE_NAME);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
-        assertEquals(ATTRIBUTE_VALUE, retrieved.values().toArray()[0]);
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        assertThat(retrieved.values().toArray()[0]).isEqualTo(ATTRIBUTE_VALUE);
         retrieved = DOMParserUtil.getAttributeValues(document, CHILD_ATTRIBUTE_NAME);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
-        retrieved.values().forEach(attributeValue -> assertEquals(ATTRIBUTE_VALUE, attributeValue));
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(2);
+        retrieved.values().forEach(attributeValue -> assertThat(attributeValue).isEqualTo(ATTRIBUTE_VALUE));
     }
 
     @Test
@@ -196,14 +207,14 @@ public class DOMParserUtilTest {
         Document document = DOMParserUtil.getDocument(XML);
         DOMParserUtil.setAttributeValue(document, MAIN_NODE, MAIN_ATTRIBUTE_NAME, newValue);
         Map<Node, String> retrieved = DOMParserUtil.getAttributeValues(document, MAIN_NODE, MAIN_ATTRIBUTE_NAME);
-        assertEquals(retrieved.values().toArray()[0], newValue);
+        assertThat(newValue).isEqualTo(retrieved.values().toArray()[0]);
         DOMParserUtil.setAttributeValue(document, MAIN_NODE, NOT_EXISTING, newValue);
         retrieved = DOMParserUtil.getAttributeValues(document, MAIN_NODE, NOT_EXISTING);
-        assertTrue(retrieved.isEmpty());
+        assertThat(retrieved).isEmpty();
         DOMParserUtil.setAttributeValue(document, CHILD_NODE, CHILD_ATTRIBUTE_NAME, newValue);
         retrieved = DOMParserUtil.getAttributeValues(document, CHILD_NODE, CHILD_ATTRIBUTE_NAME);
-        assertEquals(2, retrieved.size());
-        retrieved.values().forEach(attributeValue -> assertEquals(newValue, attributeValue));
+        assertThat(retrieved).hasSize(2);
+        retrieved.values().forEach(attributeValue -> assertThat(attributeValue).isEqualTo(newValue));
     }
 
     @Test
@@ -212,31 +223,31 @@ public class DOMParserUtilTest {
         final String newNodeValue = "NEW_NODE_VALUE";
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, Node> retrieved = DOMParserUtil.createNodes(document, MAIN_NODE, newNodeName, newNodeValue);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).hasSize(1);
         Node created = (Node) retrieved.values().toArray()[0];
-        assertNotNull(created);
-        assertEquals(newNodeName, created.getNodeName());
-        assertEquals(newNodeValue, created.getTextContent());
+        assertThat(created).isNotNull();
+        assertThat(created.getNodeName()).isEqualTo(newNodeName);
+        assertThat(created.getTextContent()).isEqualTo(newNodeValue);
         retrieved = DOMParserUtil.createNodes(document, MAIN_NODE, newNodeName, null);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).hasSize(1);
         created = (Node) retrieved.values().toArray()[0];
-        assertNotNull(created);
-        assertEquals(newNodeName, created.getNodeName());
-        assertTrue(created.getTextContent().isEmpty());
+        assertThat(created).isNotNull();
+        assertThat(created.getNodeName()).isEqualTo(newNodeName);
+        assertThat(created.getTextContent()).isEmpty();
 
         retrieved = DOMParserUtil.createNodes(document, CHILD_NODE, newNodeName, newNodeValue);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((key, createdNode) -> {
-            assertNotNull(createdNode);
-            assertEquals(newNodeName, createdNode.getNodeName());
-            assertEquals(newNodeValue, createdNode.getTextContent());
+            assertThat(createdNode).isNotNull();
+            assertThat(createdNode.getNodeName()).isEqualTo(newNodeName);
+            assertThat(createdNode.getTextContent()).isEqualTo(newNodeValue);
         });
         retrieved = DOMParserUtil.createNodes(document, CHILD_NODE, newNodeName, null);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((key, createdNode) -> {
-            assertNotNull(createdNode);
-            assertEquals(newNodeName, createdNode.getNodeName());
-            assertTrue(createdNode.getTextContent().isEmpty());
+            assertThat(createdNode).isNotNull();
+            assertThat(createdNode.getNodeName()).isEqualTo(newNodeName);
+            assertThat(createdNode.getTextContent()).isEmpty();
         });
     }
 
@@ -246,31 +257,31 @@ public class DOMParserUtilTest {
         final String newNodeValue = "NEW_NODE_VALUE";
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, Node> retrieved = DOMParserUtil.createNestedNodes(document, MAIN_NODE, TEST_NODE, newNodeName, newNodeValue);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).hasSize(1);
         Node created = (Node) retrieved.values().toArray()[0];
-        assertNotNull(created);
-        assertEquals(newNodeName, created.getNodeName());
-        assertEquals(newNodeValue, created.getTextContent());
+        assertThat(created).isNotNull();
+        assertThat(created.getNodeName()).isEqualTo(newNodeName);
+        assertThat(created.getTextContent()).isEqualTo(newNodeValue);
         retrieved = DOMParserUtil.createNestedNodes(document, MAIN_NODE, TEST_NODE, newNodeName, null);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).hasSize(1);
         created = (Node) retrieved.values().toArray()[0];
-        assertNotNull(created);
-        assertEquals(newNodeName, created.getNodeName());
-        assertTrue(created.getTextContent().isEmpty());
+        assertThat(created).isNotNull();
+        assertThat(created.getNodeName()).isEqualTo(newNodeName);
+        assertThat(created.getTextContent()).isEmpty();
 
         retrieved = DOMParserUtil.createNestedNodes(document, MAIN_NODE, CHILD_NODE, newNodeName, newNodeValue);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((key, createdNode) -> {
-            assertNotNull(createdNode);
-            assertEquals(newNodeName, createdNode.getNodeName());
-            assertEquals(newNodeValue, createdNode.getTextContent());
+            assertThat(createdNode).isNotNull();
+            assertThat(createdNode.getNodeName()).isEqualTo(newNodeName);
+            assertThat(createdNode.getTextContent()).isEqualTo(newNodeValue);
         });
         retrieved = DOMParserUtil.createNestedNodes(document, MAIN_NODE, CHILD_NODE, newNodeName, null);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((key, createdNode) -> {
-            assertNotNull(createdNode);
-            assertEquals(newNodeName, createdNode.getNodeName());
-            assertTrue(createdNode.getTextContent().isEmpty());
+            assertThat(createdNode).isNotNull();
+            assertThat(createdNode.getNodeName()).isEqualTo(newNodeName);
+            assertThat(createdNode.getTextContent()).isEmpty();
         });
     }
 
@@ -279,65 +290,118 @@ public class DOMParserUtilTest {
         String newNodeName = "NEW_NODE_NAME_0";
         String newNodeValue = "NEW_NODE_VALUE_=";
         Document document = DOMParserUtil.getDocument(XML);
+        
         Map<Node, List<Node>> testNodesMap = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, TEST_NODE);
-        assertEquals(1, testNodesMap.size());
+        assertThat(testNodesMap).hasSize(1);
+        
         Node mainNode = testNodesMap.keySet().iterator().next();
         Node retrieved = DOMParserUtil.createNodeAtPosition(mainNode, newNodeName, newNodeValue, null);
-        assertNotNull(retrieved);
-        assertEquals(newNodeName, retrieved.getNodeName());
-        assertEquals(newNodeValue, retrieved.getTextContent());
-        assertEquals(retrieved, mainNode.getChildNodes().item(mainNode.getChildNodes().getLength() - 1));
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue);
+        assertThat(mainNode.getChildNodes().item(mainNode.getChildNodes().getLength() - 1)).isEqualTo(retrieved);
+        
         newNodeName = "NEW_NODE_NAME_1";
         newNodeValue = "NEW_NODE_VALUE_1";
         retrieved = DOMParserUtil.createNodeAtPosition(mainNode, newNodeName, newNodeValue, 0);
-        assertNotNull(retrieved);
-        assertEquals(newNodeName, retrieved.getNodeName());
-        assertEquals(newNodeValue, retrieved.getTextContent());
-        assertEquals(retrieved, mainNode.getChildNodes().item(0));
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue);
+        assertThat(mainNode.getChildNodes().item(0)).isEqualTo(retrieved);
+        
         newNodeName = "NEW_NODE_NAME_2";
         newNodeValue = "NEW_NODE_VALUE_2";
         retrieved = DOMParserUtil.createNodeAtPosition(mainNode, newNodeName, newNodeValue, 2);
-        assertNotNull(retrieved);
-        assertEquals(newNodeName, retrieved.getNodeName());
-        assertEquals(newNodeValue, retrieved.getTextContent());
-        assertEquals(retrieved, mainNode.getChildNodes().item(2));
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue);
+        assertThat(mainNode.getChildNodes().item(2)).isEqualTo(retrieved);
+    }
+
+    @Test
+    public void createNodeAndAppend() throws Exception {
+        String newNodeName0 = "NEW_NODE_NAME_0";
+        String newNodeValue0 = "NEW_NODE_VALUE_=";
+        Document document = DOMParserUtil.getDocument(XML);
+        Map<Node, List<Node>> testNodesMap = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, TEST_NODE);
+        assertThat(testNodesMap).hasSize(1);
+        
+        Node mainNode = testNodesMap.keySet().iterator().next();
+        int startingChildNodes = mainNode.getChildNodes().getLength();
+        
+        Node retrieved = DOMParserUtil.createNodeAndAppend(mainNode, newNodeName0, newNodeValue0);
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName0);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue0);
+        assertThat(mainNode.getChildNodes().item(mainNode.getChildNodes().getLength() - 1)).isEqualTo(retrieved);
+        assertThat(mainNode.getChildNodes().getLength()).isEqualTo(startingChildNodes + 1);
+        String newNodeName1 = "NEW_NODE_NAME_1";
+        String newNodeValue1 = "NEW_NODE_VALUE_1";
+        
+        retrieved = DOMParserUtil.createNodeAndAppend(mainNode, newNodeName1, newNodeValue1);
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName1);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue1);
+        assertThat(mainNode.getChildNodes().item(mainNode.getChildNodes().getLength() - 1)).isEqualTo(retrieved);
+        assertThat(mainNode.getChildNodes().getLength()).isEqualTo(startingChildNodes + 2);
+        String newNodeName2 = "NEW_NODE_NAME_2";
+        String newNodeValue2 = "NEW_NODE_VALUE_2";
+
+        retrieved = DOMParserUtil.createNodeAndAppend(mainNode, newNodeName2, newNodeValue2);
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved.getNodeName()).isEqualTo(newNodeName2);
+        assertThat(retrieved.getTextContent()).isEqualTo(newNodeValue2);
+        assertThat(mainNode.getChildNodes().item(mainNode.getChildNodes().getLength() - 1)).isEqualTo(retrieved);
+        assertThat(mainNode.getChildNodes().getLength()).isEqualTo(startingChildNodes + 3);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes).getNodeName()).isEqualTo(newNodeName0);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes).getTextContent()).isEqualTo(newNodeValue0);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes + 1).getNodeName()).isEqualTo(newNodeName1);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes + 1).getTextContent()).isEqualTo(newNodeValue1);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes + 2).getNodeName()).isEqualTo(newNodeName2);
+        assertThat(mainNode.getChildNodes().item(startingChildNodes + 2).getTextContent()).isEqualTo(newNodeValue2);
     }
 
     @Test
     public void getChildrenNodesFromDocument() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, List<Node>> retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, TEST_NODE);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
         Node keyNode = retrieved.keySet().iterator().next();
-        assertNotNull(keyNode);
-        assertEquals(MAIN_NODE, keyNode.getNodeName());
+        assertThat(keyNode).isNotNull();
+        assertThat(keyNode.getNodeName()).isEqualTo(MAIN_NODE);
         List<Node> valueNodes = retrieved.get(keyNode);
-        assertTrue(valueNodes != null && valueNodes.size() == 1);
-        assertEquals(TEST_NODE, valueNodes.get(0).getNodeName());
+        assertThat(valueNodes).isNotNull().hasSize(1);
+        assertThat(valueNodes.get(0).getNodeName()).isEqualTo(TEST_NODE);
+        
         retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, NOT_EXISTING);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
-        assertTrue(retrieved.values().iterator().next().isEmpty());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        assertThat(retrieved.values().iterator().next()).isEmpty();
+        
         retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, CHILD_NODE);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
         keyNode = retrieved.keySet().iterator().next();
-        assertNotNull(keyNode);
-        assertEquals(MAIN_NODE, keyNode.getNodeName());
+        assertThat(keyNode).isNotNull();
+        assertThat(keyNode.getNodeName()).isEqualTo(MAIN_NODE);
         valueNodes = retrieved.get(keyNode);
-        assertTrue(valueNodes != null && valueNodes.size() == 2);
-        valueNodes.forEach(childNode -> assertEquals(CHILD_NODE, childNode.getNodeName()));
-        List<String> nodeToTest = Arrays.asList(TEST_NODE, OTHER_NODE);
+        assertThat(valueNodes).isNotNull().hasSize(2);
+        assertThat(valueNodes).extracting(x -> x.getNodeName()).containsExactly(CHILD_NODE, CHILD_NODE);
+        
+        List<String> nodeToTest = List.of(TEST_NODE, OTHER_NODE);
         for (String childNodeName : nodeToTest) {
             retrieved = DOMParserUtil.getChildrenNodesMap(XML, CHILD_NODE, childNodeName);
-            assertNotNull(retrieved);
-            assertEquals(2, retrieved.size());
+            assertThat(retrieved).isNotNull();
+            assertThat(retrieved).hasSize(2);
             retrieved.forEach((childKeyNode, childValueNodes) -> {
-                assertNotNull(childKeyNode);
-                assertEquals(CHILD_NODE, childKeyNode.getNodeName());
-                assertTrue(childValueNodes != null && childValueNodes.size() == 1);
-                assertEquals(childNodeName, childValueNodes.get(0).getNodeName());
+                assertThat(childKeyNode).isNotNull();
+                assertThat(childKeyNode.getNodeName()).isEqualTo(CHILD_NODE);
+                assertThat(childValueNodes).isNotNull().hasSize(1);
+                assertThat(childValueNodes.get(0).getNodeName()).isEqualTo(childNodeName);
             });
         }
     }
@@ -346,41 +410,49 @@ public class DOMParserUtilTest {
     public void getChildrenNodesFromNode() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, List<Node>> retrieved = DOMParserUtil.getChildrenNodesMap(document, MAIN_NODE, CHILD_NODE);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        
         Node mainNode = (Node) retrieved.keySet().toArray()[0];
-        assertEquals(MAIN_NODE, mainNode.getNodeName());
+        
+        assertThat(mainNode.getNodeName()).isEqualTo(MAIN_NODE);
+        
         List<Node> nodes = retrieved.get(mainNode);
-        nodes.forEach(childNode -> assertEquals(CHILD_NODE, childNode.getNodeName()));
+        nodes.forEach(childNode -> assertThat(childNode.getNodeName()).isEqualTo(CHILD_NODE));
         retrieved = DOMParserUtil.getChildrenNodesMap(nodes.get(0), NESTING_NODE, NESTED_NODE);
-        assertNotNull(retrieved);
-        assertEquals(1, retrieved.size());
+
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(1);
+        
         Node childNode = (Node) retrieved.keySet().toArray()[0];
-        assertEquals(NESTING_NODE, childNode.getNodeName());
+        
+        assertThat(childNode.getNodeName()).isEqualTo(NESTING_NODE);
+        
         nodes = retrieved.get(childNode);
-        assertNotNull(nodes);
-        assertEquals(1, nodes.size());
-        assertEquals(NESTED_NODE, nodes.get(0).getNodeName());
+        assertThat(nodes).isNotNull();
+        assertThat(nodes).hasSize(1);
+        assertThat(nodes.get(0).getNodeName()).isEqualTo(NESTED_NODE);
     }
 
     @Test
     public void getNestedChildrenNodesMap() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         Map<Node, List<Node>> retrieved = DOMParserUtil.getNestedChildrenNodesMap(document, MAIN_NODE, CHILD_NODE, TEST_NODE);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((childNode, testNodes) -> {
-            assertEquals(CHILD_NODE, childNode.getNodeName());
-            assertEquals(1, testNodes.size());
-            assertEquals(TEST_NODE, testNodes.get(0).getNodeName());
+            assertThat(childNode.getNodeName()).isEqualTo(CHILD_NODE);
+            assertThat(testNodes).hasSize(1);
+            assertThat(testNodes.get(0).getNodeName()).isEqualTo(TEST_NODE);
         });
         retrieved = DOMParserUtil.getNestedChildrenNodesMap(document, CHILD_NODE, NESTING_NODE, NESTED_NODE);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(2);
         retrieved.forEach((nestingNode, nestedNodes) -> {
-            assertEquals(NESTING_NODE, nestingNode.getNodeName());
-            assertEquals(1, nestedNodes.size());
-            assertEquals(NESTED_NODE, nestedNodes.get(0).getNodeName());
+        	assertThat(nestingNode.getNodeName()).isEqualTo(NESTING_NODE);
+        	assertThat(nestedNodes).hasSize(1);
+        	assertThat(nestedNodes.get(0).getNodeName()).isEqualTo(NESTED_NODE);
         });
     }
 
@@ -388,19 +460,22 @@ public class DOMParserUtilTest {
     public void getNestedChildrenNodesList() throws Exception {
         Document document = DOMParserUtil.getDocument(XML);
         List<Node> retrieved = DOMParserUtil.getNestedChildrenNodesList(document, MAIN_NODE, CHILD_NODE, TEST_NODE);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
-        retrieved.forEach(testNode -> assertEquals(TEST_NODE, testNode.getNodeName()));
+        
+        assertThat(retrieved).isNotNull();
+        assertThat(retrieved).hasSize(2);
+
+        retrieved.forEach(testNode -> assertThat(testNode.getNodeName()).isEqualTo(TEST_NODE));
         retrieved = DOMParserUtil.getNestedChildrenNodesList(document, CHILD_NODE, NESTING_NODE, NESTED_NODE);
-        assertNotNull(retrieved);
-        assertEquals(2, retrieved.size());
-        retrieved.forEach(nestedNode -> assertEquals(NESTED_NODE, nestedNode.getNodeName()));
+        
+        assertThat(retrieved).isNotNull().hasSize(2);
+        retrieved.forEach(nestedNode -> assertThat(nestedNode.getNodeName()).isEqualTo(NESTED_NODE));
     }
 
     @Test
     public void getDocument() throws Exception {
         Document retrieved = DOMParserUtil.getDocument(XML);
-        assertNotNull(retrieved);
+        
+        assertThat(retrieved).isNotNull();
     }
 
     @Test
@@ -410,8 +485,8 @@ public class DOMParserUtilTest {
         Document document = builder.newDocument();
         document.appendChild(document.createElement("CREATED"));
         String retrieved = DOMParserUtil.getString(document);
-        assertNotNull(retrieved);
-        assertTrue(retrieved.contains("CREATED"));
+        
+        assertThat(retrieved).isNotNull().contains("CREATED");
     }
 
     @Test
@@ -426,9 +501,9 @@ public class DOMParserUtilTest {
     }
 
     private void commonCheckNodeStream(NodeList src) {
-        assertEquals(src.getLength(), DOMParserUtil.asStream(src).count());
+        assertThat(DOMParserUtil.asStream(src).count()).isEqualTo(src.getLength());
         AtomicInteger counter = new AtomicInteger();
         final Stream<Node> nodeStream = DOMParserUtil.asStream(src);
-        nodeStream.forEach(node -> assertEquals(src.item(counter.getAndIncrement()), node));
+        nodeStream.forEach(node -> assertThat(node).isEqualTo(src.item(counter.getAndIncrement())));
     }
 }
