@@ -1,23 +1,24 @@
-/*
- * Copyright 2016 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.kie.dmn.core.ast;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.kie.dmn.api.core.DMNMessage;
@@ -27,11 +28,9 @@ import org.kie.dmn.api.feel.runtime.events.FEELEvent;
 import org.kie.dmn.api.feel.runtime.events.FEELEvent.Severity;
 import org.kie.dmn.api.feel.runtime.events.FEELEventListener;
 import org.kie.dmn.core.api.DMNExpressionEvaluator;
-import org.kie.dmn.core.api.EvaluatorResult;
-import org.kie.dmn.core.api.EvaluatorResult.ResultType;
-import org.kie.dmn.core.compiler.DMNProfile;
+import org.kie.dmn.api.core.EvaluatorResult;
+import org.kie.dmn.api.core.EvaluatorResult.ResultType;
 import org.kie.dmn.core.impl.DMNResultImpl;
-import org.kie.dmn.core.impl.DMNRuntimeImpl;
 import org.kie.dmn.core.util.Msg;
 import org.kie.dmn.core.util.MsgUtil;
 import org.kie.dmn.feel.FEEL;
@@ -55,8 +54,9 @@ public class DMNLiteralExpressionEvaluator
     private LiteralExpression expressionNode;
     private CompiledExpression expression;
     private boolean isFunctionDef;
+    final FEELImpl feelInstance;
 
-    public DMNLiteralExpressionEvaluator(CompiledExpression expression, LiteralExpression expressionNode) {
+    public DMNLiteralExpressionEvaluator(CompiledExpression expression, LiteralExpression expressionNode, FEEL feel) {
         this.expressionNode = expressionNode;
         this.expression = expression;
         if (expression instanceof CompiledExpressionImpl) {
@@ -67,6 +67,7 @@ public class DMNLiteralExpressionEvaluator
             throw new IllegalArgumentException(
                     "Cannot create DMNLiteralExpressionEvaluator: unsupported type " + expression.getClass());
         }
+        this.feelInstance = (FEELImpl) feel;
     }
 
     public boolean isFunctionDefinition() {
@@ -80,14 +81,10 @@ public class DMNLiteralExpressionEvaluator
     @Override
     public EvaluatorResult evaluate(DMNRuntimeEventManager dmrem, DMNResult dmnr) {
         DMNResultImpl result = (DMNResultImpl) dmnr;
-        // in case an exception is thrown, the parent node will report it
-        List<DMNProfile> profiles = ((DMNRuntimeImpl) dmrem.getRuntime()).getProfiles();
-        @SuppressWarnings({"unchecked", "rawtypes"})
-        FEELImpl feelInstance = (FEELImpl) FEEL.newInstance(dmrem.getRuntime().getRootClassLoader(), (List) profiles);
         LiteralInvocationListener liListener = new LiteralInvocationListener();
-        @SuppressWarnings({"unchecked", "rawtypes"})
-        EvaluationContextImpl ectx = feelInstance.newEvaluationContext(Arrays.asList(liListener), result.getContext().getAll());
+        EvaluationContextImpl ectx = feelInstance.newEvaluationContext(List.of(liListener), result.getContext().getAll());
         ectx.setDMNRuntime(dmrem.getRuntime());
+        // in case an exception is thrown, the parent node will report it
         Object val = feelInstance.evaluate(expression, ectx);
         ResultType resultType = ResultType.SUCCESS;
         for (FEELEvent captured : liListener.events) {
