@@ -1,3 +1,21 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 package org.kie.dmn.core.compiler.profiles;
 
 import java.util.Arrays;
@@ -12,7 +30,7 @@ import org.kie.dmn.feel.parser.feel11.profiles.KieExtendedFEELProfile;
 
 public final class ExtendedDMNProfile extends KieExtendedFEELProfile implements DMNProfile {
 
-    private static final List<DMNExtensionRegister> EXTENSION_REGISTERS = Arrays.asList(new DecisionServicesExtensionRegister());
+    private static final List<DMNExtensionRegister> EXTENSION_REGISTERS = List.of(new DecisionServicesExtensionRegister());
 
     @Override
     public List<DMNExtensionRegister> getExtensionRegisters() {
