@@ -1,59 +1,61 @@
-/*
- * Copyright 2017 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.kie.dmn.feel.runtime.functions.twovaluelogic;
-
-import org.junit.Before;
-import org.junit.Test;
-import org.kie.dmn.feel.runtime.events.InvalidParametersEvent;
-import org.kie.dmn.feel.runtime.functions.FunctionTestUtil;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-public class ModeFunctionTest {
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.kie.dmn.feel.runtime.events.InvalidParametersEvent;
+import org.kie.dmn.feel.runtime.functions.FunctionTestUtil;
+
+class ModeFunctionTest {
 
     private NNModeFunction modeFunction;
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         modeFunction = NNModeFunction.INSTANCE;
     }
 
     @Test
-    public void invokeListNull() {
+    void invokeListNull() {
         FunctionTestUtil.assertResult(modeFunction.invoke((List) null), null);
     }
 
     @Test
-    public void invokeListEmpty() {
+    void invokeListEmpty() {
         FunctionTestUtil.assertResult(modeFunction.invoke(Collections.emptyList()), null);
     }
 
     @Test
-    public void invokeListTypeHeterogenous() {
+    void invokeListTypeHeterogenous() {
         FunctionTestUtil.assertResultError(modeFunction.invoke(Arrays.asList(1, "test")), InvalidParametersEvent.class);
     }
 
     @Test
-    public void invokeListParamSupportedTypesWithNull() {
+    void invokeListParamSupportedTypesWithNull() {
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(20, 30, null, (long) 20, null, BigDecimal.TEN)),
-                Arrays.asList( BigDecimal.valueOf(20) ));
+                                      List.of(BigDecimal.valueOf(20)));
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(20, 30, null, (long) 20, 30, BigDecimal.TEN)),
                 Arrays.asList( BigDecimal.valueOf(20), BigDecimal.valueOf(30) ));
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(null, null, null)),
@@ -61,24 +63,24 @@ public class ModeFunctionTest {
     }
 
     @Test
-    public void invokeArrayNull() {
+    void invokeArrayNull() {
         FunctionTestUtil.assertResult(modeFunction.invoke((Object[]) null), null);
     }
 
     @Test
-    public void invokeArrayEmpty() {
+    void invokeArrayEmpty() {
         FunctionTestUtil.assertResult(modeFunction.invoke(new Object[]{}), null);
     }
 
     @Test
-    public void invokeArrayTypeHeterogenous() {
+    void invokeArrayTypeHeterogenous() {
         FunctionTestUtil.assertResultError(modeFunction.invoke(new Object[]{1, "test"}), InvalidParametersEvent.class);
     }
 
     @Test
-    public void invokeArrayParamSupportedTypesWithNull() {
+    void invokeArrayParamSupportedTypesWithNull() {
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(20, 30, null, (long) 20, null, BigDecimal.TEN)),
-                Arrays.asList( BigDecimal.valueOf(20) ));
+                                      List.of(BigDecimal.valueOf(20)));
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(20, 30, null, (long) 20, 30, BigDecimal.TEN)),
                 Arrays.asList( BigDecimal.valueOf(20), BigDecimal.valueOf(30) ));
         FunctionTestUtil.assertResult(modeFunction.invoke(Arrays.asList(null, null, null)),
