@@ -1,19 +1,21 @@
-/*
- * Copyright 2017 Red Hat, Inc. and/or its affiliates.
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
-
 package org.kie.dmn.signavio;
 
 import java.util.Arrays;
@@ -24,10 +26,12 @@ import org.kie.dmn.api.marshalling.DMNExtensionRegister;
 import org.kie.dmn.core.compiler.DMNProfile;
 import org.kie.dmn.core.compiler.DRGElementCompiler;
 import org.kie.dmn.feel.runtime.FEELFunction;
+import org.kie.dmn.signavio.MultiInstanceDecisionLogic.MultiInstanceDecisionNodeCompiler;
 import org.kie.dmn.signavio.feel.runtime.functions.AbsFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.AppendAllFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.AreElementsOfFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.AvgFunction;
+import org.kie.dmn.signavio.feel.runtime.functions.ConcatFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.ContainsOnlyFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.DateTimeFunction;
 import org.kie.dmn.signavio.feel.runtime.functions.DayAddFunction;
@@ -81,13 +85,13 @@ import org.kie.dmn.signavio.feel.runtime.functions.ZipFunction;
 
 public class KieDMNSignavioProfile implements DMNProfile {
     
-    protected final static List<DMNExtensionRegister> EXT_REGISTERS = Collections.unmodifiableList(Arrays.asList(
+    protected final static List<DMNExtensionRegister> EXT_REGISTERS = Collections.unmodifiableList(List.of(
             new MultiInstanceDecisionLogicRegister()
-    ));
+                                                                                                          ));
     
-    protected final static List<DRGElementCompiler> COMPILATION_EXT = Collections.unmodifiableList(Arrays.asList(
-            new MultiInstanceDecisionLogic.MultiInstanceDecisionNodeCompiler()
-    ));
+    protected final static List<DRGElementCompiler> COMPILATION_EXT = Collections.unmodifiableList(List.of(
+            new MultiInstanceDecisionNodeCompiler()
+                                                                                                          ));
 
     @Override
     public List<DMNExtensionRegister> getExtensionRegisters() {
@@ -158,6 +162,7 @@ public class KieDMNSignavioProfile implements DMNProfile {
                                                                                new IsSpacesFunction(),
                                                                                new IsNumericFunction(),
                                                                                new IsAlphanumericFunction(),
-                                                                               new IsAlphaFunction()
+                                                                               new IsAlphaFunction(),
+                                                                               new ConcatFunction()
     };
 }
